第八章校对

--- a/OEBPS/Text/c008.xhtml
+++ b/OEBPS/Text/c008.xhtml
@@ -15,128 +15,163 @@
     <p>在与梅赛德斯的战斗中败北的奥加，完全没有表现出抵抗的意思。</p>
     <p>岂止如此，他跪着接受死亡，伸出头来。</p>
     <p>这简直就像是服从主君的臣下，让梅赛德斯感到困惑。</p>
-    <p>“真干净啊。虽说是我赢了，但没想到完全没有反抗”</p>
-    <p>“我们奥加族只有强大才是唯一的绝对的法律。我们对于胜利者将竭尽敬意和忠诚。</p>
-    <p>你是胜利者。所以我有喜欢我的权利……当然，杀人的权利也是有的。</p>
-    <p>我将殉我族之法」</p>
+    <br>
+    <p>“<span class="character">真纯洁啊。虽说是我赢了，但没想到完全没有反抗”</span></p>
+    <p>“<span class="character">我们奥加族只有强大才是唯一的绝对的法律。我们对于胜利者将竭尽敬意和忠诚。</span></p>
+    <p><span class="character">你是胜利者。所以有随您的心情处置我的权利……当然，也包含杀死我权利。</span></p>
+    <p><span class="character">我将殉我族之法</span>」</p>
+    <br>
     <p>梅赛德斯毫不疏忽大意，在头脑中回味着奥加的语言。</p>
     <p>那么说来，确实，关于奥加的书有那样的记述的感觉。</p>
-    <p>“虽然奥加是危险的魔物，但如果奥加能够一对一地打倒它，那么他会成为一生都不会背叛的忠实的仆人吧”。</p>
+    <p>“虽然奥加是危险的魔物，但如果能够一对一地打倒它，那么他会成为一生都不会背叛的忠实的仆人吧”。</p>
     <p>而且，书上还这样写着。</p>
-    <p>但是，奥加竭尽忠诚一生中只有一个人。第一次以一对一输掉的对手被认定为主，那个忠诚以后绝对不变动。</p>
-    <p>因此，即使奥加获胜，如果奥加已经有主，就不能成为胜者。”</p>
+    <p>“但是，奥加竭尽忠诚一生中只有一个人。第一次以一对一输掉的对手被认定为主，那个忠诚以后绝对不变动。</p>
+    <p>因此，即使奥加获胜，如果奥加已经有主，胜者就不能成为新的主人。”</p>
+    <br>
     <p>（……也许是捡到的东西吧）</p>
+    <br>
     <p>从别人口中说出的忠诚完全不值得信任。人为了欲望会马上背叛。</p>
     <p>但是，梅塞德斯认为，如果是被本能所支撑的魔物的忠诚，值得一想。</p>
     <p>人和人发誓对人忠诚，动物本能跟随群体的领导完全不同。</p>
     <p>前者背叛，后者不背叛。</p>
-    <p>赌上群体的领导人的座位作战的事有,不过，打猎的当口服从的样子突然欺骗讨伐等不做吧。</p>
-    <p>但是人们做那个。因为他们有足够的智慧和欲望。</p>
-    <p>梅赛德斯拉起剑，看奥加。</p>
+    <p>虽然也有有赌上群体的领导人的座位而战斗,但在狩猎时也会装作服从的样子不会突然进行欺骗和讨伐吧。</p>
+    <p>而人们做那个。因为他们有足够的智慧和欲望。</p>
+    <p>梅赛德斯拉起剑，看向奥加。</p>
     <p>虽然露出了空隙，却没有动弹的样子。杀掉是很简单的，但如果不背叛是事实的话，那太可惜了。</p>
-    <p>“那就问吧。这次要成为我的手脚，跟随我吗？”</p>
-    <p>“如果这是你的愿望”</p>
-    <p>「好。那就在那里等着吧」</p>
-    <p>「御意。我的主啊」</p>
+    <br>
+    <p>“<span class="character">那就提问。今后要成为我的手脚，跟随我吗？</span>”</p>
+    <p>“<span class="character">如果这是你的愿望</span>”</p>
+    <p>「<span class="character">好。那就在那里等着吧</span>」</p>
+    <p>「<span class="character">御意。我的主啊</span>」</p>
+    <br>
     <p>意想不到的确保了行李箱。</p>
     <p>还不能相信,不过，今后暂且观察吧。</p>
-    <p>比起那个，现在是商人和看那个护卫先。</p>
-    <p>护卫是……不行。哪个都完全死了。即使是再生力和生命力出色的吸血鬼也不是不死。</p>
-    <p>前世看到的故事中的吸血鬼的话贯穿了心脏？这到底是怎么回事”之类的话似乎可以复活了，但是这个世界的吸血鬼并不是那么简单的。</p>
-    <p>很遗憾，活着的只是一个商人。</p>
-    <p>“结束了。站起来吗？</p>
-    <p>“哦，哦……谢谢……真的非常感谢……。</p>
-    <p>也、已经不行了吗……”</p>
+    <p>比起那个，现在还是先看下商人和那些护卫。</p>
+    <p>护卫是……不行。哪个都完全死了。即使是再生力和生命力出色的吸血鬼也不是不死的。</p>
+    <p>前世看到的故事中的吸血鬼的话“头被砍了？心脏被贯穿了？那又如何”之类的话似乎可以复活了，但是这个世界的吸血鬼并不是那么简单的。</p>
+    <p>很遗憾，看来活着的只有那一个商人了。</p>
+    <br>
+    <p>“<span class="character">结束了。站得起来吗？</span></p>
+    <p>“<span class="character">哦，哦……谢谢……真的非常感谢……。</span></p>
+    <p><span class="character">也、已经不行了吗……”</span></p>
+    <br>
     <p>商人颤抖着不停地向梅赛德斯道谢。</p>
-    <p>即使那样，也太过分了。</p>
-    <p>身体瘦弱，简直像骨头一样。</p>
+    <p>即使那样，情况也很糟糕。</p>
+    <p>身体瘦弱，已经和骨头一样了。</p>
     <p>看得出已经好几天没吃了。</p>
-    <p>“看起来像是商人雇用的护卫……虽然护卫已经全灭了”</p>
-    <p>“哈，是的……如您所知，我在经营商会。叫做トライヌ商会……您知道吗？</p>
-    <p>“你什么都知道，这不是这个国家屈指可数的大商会吗？”</p>
-    <p>トライヌ商会……以大城市蓝调为据点的吸血鬼之国也是屈指可数的大商会。</p>
+    <br>
+    <p>“<span class="character">看着像是商人和雇用的护卫……虽然护卫已经全灭了”</span></p>
+    <p>“<span class="character">是，是的……如你所见，我在经营商会。叫做トライヌ商会……您知道吗？</span></p>
+    <p>“ <span class="character">知道，这不是这个国家屈指可数的大商会吗？”</span></p>
+    <br>
+    <p>トライヌ商会……以大城市布鲁特为据点的在吸血鬼之国也是屈指可数的大商会。</p>
     <p>前几天梅赛德斯购物的大型杂货店也是トライヌ商会的东西。</p>
     <p>如果他说的是真的，那么他就是那个大商会的会长。</p>
-    <p>那样的大物是什么，在这样的迷宫快要死了。</p>
-    <p>“发生了什么？”</p>
-    <p>“我们商会近年来正在被其他商会超越……于是，听说称霸迷宫的人可以获得巨万的财富，于是在城市里也雇用了屈指可数的seeker开始称霸这个迷宫”</p>
+    <p>那样的大人物又为什么，在这样的迷宫快死了。</p>
+    <br>
+    <p>“<span class="character">发生了什么吗？”</span></p>
+    <p>“<span class="character">我们商会近年来正在被其他商会超越……于是，听说称霸迷宫的人可以获得巨万的财富，于是在城市里也雇用了屈指可数的seeker开始攻略这个迷宫”</span></p>
+    <br>
     <p>攻占迷宫的人将获得财富。</p>
     <p>这是在seeker他们之间流传的童话般的梦幻故事。</p>
     <p>实际上，也有过去称霸了迷宫的seeker带回了宝石和金银财宝这样的例子，不一定是眉唾物。</p>
-    <p>海报们相信迷宫的深处有宝山在沉睡。</p>
-    <p>“我雇了三支B级别的著名seeker。</p>
-    <p>三者都是四人组成，拥有确实的成绩和经验”</p>
-    <p>B等级可以说是普通雇佣的seeker最好的等级。</p>
+    <p>seeker们相信迷宫的深处有宝山在沉睡。</p>
+    <br>
+    <p>“ <span class="character">我雇了三支B级别的著名seeker。</span></p>
+    <p> <span class="character">三者都是四人组成，拥有确实的成绩和经验”</span></p>
+    <br>
+    <p>B等级可以说是平常能雇佣的seeker最好的等级。</p>
     <p>这个以上的A等级几乎都是国家和贵族的专属，优先接受上级的委托，所以即使是大商人也不能轻易雇佣。</p>
-    <p>因此是B等级，并且他不着眼于钱雇佣三队，共计十二人开始了迷宫的攻略。</p>
-    <p>“到中途还顺利……可是，从越过十层的附近魔物的强度跳起，尽管如此想办法到达了到最下层,不过，那个是错误。</p>
-    <p>只是好不容易走到最后，力量和道具都用完了的护卫们一个接一个地死去了”</p>
+    <p>因此是B等级，并且他不吝惜于钱雇佣三队，共计十二人开始了迷宫的攻略。</p>
+    <br>
+    <p>“<span class="character">到中途还顺利……可是，从越过十层的附近魔物的强度跳起，尽管如此想办法到达了到最下层,不过，那个是错误。</span></p>
+    <p><span class="character">只是好不容易走到最后，力量和道具都用完了的护卫们一个接一个地死去了”</span></p>
+    <br>
     <p>商人好像想起来了，抱着自己的肩膀颤抖着。</p>
     <p>“还能去的话就危险了”。最初说这句话的人是谁？</p>
     <p>我们还有余力。所以还能去。</p>
     <p>这样考虑的时候已经是红灯了。如果到了烦恼的地方，就应该坦率地撤退。</p>
     <p>他判断错了。</p>
-    <p>“幸存者和我决定马上撤退。</p>
-    <p>但是装了食物的包在逃跑的途中成了重担，快要被追上的时候扔掉了”</p>
-    <p>梅赛德斯想问有没有带装满血液的瓶子，但是没有带。</p>
+    <br>
+    <p>“ <span class="character">幸存者和我决定马上撤退。</span></p>
+    <p> <span class="character">但是装了食物的包在逃跑的途中成了重担，快要被追上的时候扔掉了”</span></p>
+    <br>
+    <p>梅赛德斯也不去问有没有带装血液的瓶子了。</p>
     <p>在这么大的混乱中，如果瓶装的血液还残留着的话就是奇迹了。</p>
     <p>不仅易碎而且占地方……我想是先破损了吧。</p>
     <p>据说，在地球历史上罐头出现之前，法国尼古拉·阿贝尔发明的瓶装储藏法被视为宝贝，这也是容器容易破损的问题。</p>
     <p>是的，瓶子容易损坏，不适合长期保存和搬运。因此罐头登场了。</p>
-    <p>“我们一边和饥饿作斗争，一边拼命向上攀登。</p>
-    <p>然后终于回到了这里……有从最底层追赶我们的魔物”</p>
-    <p>“那是那个奥加吗？”</p>
-    <p>“是的……被本来就很强的奥加，削弱了的seeker们没有完成的策略也做了。</p>
-    <p>如果你不来的话，我现在也变成尸体了吧”</p>
+    <br>
+    <p>“<span class="character">我们一边和饥饿作斗争，一边拼命向上攀登。</span></p>
+    <p><span class="character">然后终于到了这里时……从最底层开始就追赶这我们的魔物也到了”</span></p>
+    <p>“<span class="character">那是那个奥加吗？”</span></p>
+    <p>“<span class="character">是的……对上本来就很强的奥加，被削弱了的seeker们也没有办法。</span></p>
+    <p><span class="character">如果你不来的话，我现在也变成尸体了吧”</span></p>
+    <br>
     <p>十二个seeker全灭了。听了那个话，梅赛德斯认识到了增加伙伴的重要性。</p>
     <p>从这个意义上来说，打倒那个奥加是运气好吧。</p>
-    <p>那个恐怕是最下层也弱的部类,不过，尽管如此应该成为战斗力。</p>
-    <p>“先回到地上吧。我陪你去。</p>
-    <p>还有……那里的奥加，名字是？”</p>
-    <p>“没有名字。请随意叫我”</p>
-    <p>突然叫你喜欢我也很为难。</p>
+    <p>那个(奥加)恐怕是最下层里比较弱的一类,不过，尽管如此应该也能成为战斗力。</p>
+    <br>
+    <p>“ <span class="character">先回到地上吧。我陪你去。</span></p>
+    <p> <span class="character">还有……那里的奥加，名字是？”</span></p>
+    <p>“ <span class="character">没有名字。请随意叫我”</span></p>
+    <br>
+    <p>突然说随你喜欢叫也很为难。</p>
     <p>梅赛德斯想，这是自己必须命名的潮流吗？</p>
-    <p>首先想到的是阿修拉，因为原本就是阿修拉种的有加，所以太便宜了。</p>
-    <p>（怎么回事呢？拥有很多武器的奥加吗……武器很多……。</p>
-    <p>你不要无意中想起武藏坊弁庆）</p>
-    <p>梅赛德思量了一下，想不出其他好名字，就决定把它命名为。</p>
+    <p>首先想到的是阿修拉，因为原本就是阿修拉种的奥加，所以太廉价了。</p>
+    <br>
+    <p>（怎么办呢？拥有很多武器的奥加吗……武器很多……。</p>
+    <p>无意中想起武藏坊弁庆）</p>
+    <br>
+    <p>梅赛德思量了一下，想不出其他好名字，就决定了命名。</p>
     <p>拥有许多庞大的武器，意外地觉得很适合这个简单的命名。</p>
-    <p>“那么你的名字从现在开始就是Benkey。”</p>
-    <p>“本凯……好名字。这个名字，我确实记住了”</p>
-    <p>「好，本凯。把倒在那里的seeker搬过来”</p>
+    <br>
+    <p>“<span class="character">那么你的名字从现在开始就是本凯。”</span></p>
+    <p>“<span class="character">本凯……好名字。这个名字，我确实记住了”</span></p>
+    <p>「<span class="character">好，本凯。把倒在那里的seeker搬过来”</span></p>
+    <br>
     <p>他们已经死了，但至少想让他们回到地上。</p>
     <p>这样想的梅赛德斯决定让奥加——本凯运送尸体。</p>
-    <p>seeker他们大概也不想被送到杀死自己的本人那里吧，但比起在这种地方遗体腐朽，应该要好些。</p>
-    <p>“站起来吗？嗯……”</p>
-    <p>“我是トライヌ。”</p>
-    <p>“トライヌ啊。站不起来的话就借你肩膀”</p>
+    <p>seeker他们大概也不想被杀死自己的本人运送吧，但比起在这种地方遗体腐朽，应该要好些。</p>
+    <p>“<span class="character">站得起来吗？嗯……”</span></p>
+    <p>“<span class="character">我是トライヌ。”</span></p>
+    <p>“<span class="character">トライヌ啊。站不起来的话就借你肩膀”</span></p>
     <p>商人的名字好像是トライヌ。用自己的名字取的商会名。</p>
     <p>虽然梅赛德斯催促他站起来，但他还是没有站起来的迹象。</p>
-    <p>因为逃亡和饥饿，连站立的力量都被他失去了。</p>
+    <p>因为逃亡和饥饿，连站立的力量都失去了。</p>
     <p>这样下去的话，在到达地面之前会饿死。这样想的梅赛德斯从袋子里拿出了好几个巧克力夹子包装的纸，解开包装。</p>
     <p>在这个国家一般使用的纸是羊皮纸。</p>
     <p>但虽说是羊皮纸，实际上好像不是用羊皮而是使用魔物的皮量产。</p>
     <p>那倒是。即使不特意剥下贵重的家畜的皮，魔物也会无限地沸腾，所以决定使用那里。</p>
     <p>首先，植物制作的纸也好象在这个世界有,不过，这边比羊皮纸贵重很少看见。</p>
-    <p>“吃这个吧。稍微好一点儿”</p>
-    <p>“那个……这难道是动物粪吗……”</p>
-    <p>“不对，放心吧”</p>
+    <br>
+    <p>“<span class="character">吃这个吧。稍微好一点儿”</span></p>
+    <p>“<span class="character">那个……这难道是动物粪吗……”</span></p>
+    <p>“<span class="character">不对，放心吧”</span></p>
+    <br>
     <p>虽说没有办法，但这是残酷的第一印象。</p>
     <p>梅赛德斯用零碎的知识制作的巧克力钳子，看起来确实不是恭维话，而是动物的粪便凝固的东西。</p>
-    <p>铁皮狗闻到香味后，犹如下定决心似的将巧克力放进了嘴里。</p>
+    <p>トライヌ闻到香味后，犹如下定决心似的将巧克力放进了嘴里。</p>
     <p>于是，警戒从表情中消失，取而代之的是惊愕。</p>
-    <p>“这是……味道不可思议。</p>
-    <p>又甜又苦。第一次吃……不，这个味道在哪儿……？”</p>
+    <br>
+    <p>“<span class="character">这是……味道不可思议。</span></p>
+    <p><span class="character">又甜又苦。第一次吃……不，这个味道在哪儿……？”</span></p>
+    <br>
     <p>然后，トライヌ一个接一个地吃了巧克力，递过来的部分一转眼全部吃光了。</p>
-    <p>看来您很满意。</p>
-    <p>“那个，那个……”</p>
-    <p>“我是梅赛德斯”</p>
-    <p>「啊，谢谢。梅赛德斯，这个是哪里···？”</p>
-    <p>“我自己做了。店里没有高卡路里又好的应急食品”</p>
-    <p>“这个是自作自作！？那太好了。请务必问一下做法……当然不能说是免费的。销售额的五成都是你……”</p>
-    <p>“这是个好消息，不过这是出去之后。”</p>
+    <p>看来很满意。</p>
+    <br>
+    <p>“<span class="character">那个，额……”</span></p>
+    <p>“<span class="character">我是梅赛德斯”</span></p>
+    <p>「<span class="character">啊，谢谢。梅赛德斯，这个是哪里···？”</span></p>
+    <p>“<span class="character">自己做的。店里没有高卡路里又好的应急食品”</span></p>
+    <p>“<span class="character">这个是自作！？那太好了。请务必问一下做法……当然不能说是免费的。销售额的五成都是您……”</span></p>
+    <p>“<span class="character">这是个好消息，不过这是出去之后。”</span></p>
+    <br>
     <p>真不愧是商人啊。这时，在摇钱树，眼睛也变色了。</p>
     <p>可是这里是什么时候魔物出现也不不可思议的迷宫中。</p>
     <p>那样的话还是先出去再说比较好吧。</p>
-    <p>梅赛德斯说了那件事，把肩膀借给了特拉伊努，向外飞去。</p>
+    <p>梅赛德斯说了那件事，把肩膀借给了トライヌ开始离开迷宫。</p>
+    <p class="divline"></p>
+    <p>行李和巧克力批量生产的工作人员GET☆</p>
+    <p>本凯非常大，有6条手臂，因此可以承载的行李是梅赛德斯的10倍。</p>
 </body>
