--- a/OEBPS/Text/c009.xhtml
+++ b/OEBPS/Text/c009.xhtml
@@ -40,7 +40,7 @@
     <p>这一半是真的，一半是假的。</p>
     <p>如果可以做那种事的话，我已经做过了。</p>
     <p>无论领主伯恩哈特卿的血缘如何，终究是被认知的可疑侧室的孩子。权力等于没有，那样的小姑娘突然有赚钱的事访问商会门前支付也是ochi吧。</p>
-    <p>特拉伊努想了一下，不久做出了决断。</p>
+    <p>トライヌ想了一下，不久做出了决断。</p>
     <p>“好吧，我也是商人。我接受这个条件”</p>
     <p>“商谈成功了。那么……”</p>
     <p>梅赛德斯从怀里拿出一张纸。</p>
