--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -27,7 +27,7 @@
     <p>还有两个妹妹，玛吉特，莫尼卡，还有他们的母亲。</p>
     <p>玛吉特的母亲因为病弱逃跑迟了，玛吉特无法抛弃这样的母亲逃跑。</p>
     <p>莫尼卡是……到底是什么呢？不知为何她正期待着看着梅赛德斯，不肯逃跑。</p>
-    <p>虽然在梅赛德斯附近，特拉伊努族也来了，但因为他知道梅赛德斯的实力，所以才判断这里是最安全的。他是个精明的人。</p>
+    <p>虽然在梅赛德斯附近，トライヌ族也来了，但因为他知道梅赛德斯的实力，所以才判断这里是最安全的。他是个精明的人。</p>
     <p>而且和以前相比，身体非常健康，而且胖得圆滚滚的。</p>
     <p>好歹用挣的钱相当豪游着。</p>
     <p>最后，伯恩哈特和梅赛德斯一样抱着胳膊静观战斗。</p>
