--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -59,7 +59,7 @@
     <p>讨厌自己。</p>
     <p>今世也是这样吗……虽然说傻瓜不死就不会治好，但自己死了也会这样吗？</p>
     <p>不，甚至感觉比前世更加恶化了。主要是因为伯恩哈特的血。</p>
-    <p>“刚开始因为太弱吃起来很辛苦，但是听说在蓝调上有名气的厨师，为了寻求帮助大幅度改善了。”</p>
+    <p>“刚开始因为太弱吃起来很辛苦，但是听说在布鲁特上有名气的厨师，为了寻求帮助大幅度改善了。”</p>
     <p>嗯？梅赛德斯想。</p>
     <p>这个时刻有什么讨厌的预感。</p>
     <p>布鲁特是伯恩哈特治理的城市的名字，是琉迪亚和玛吉特生活的地方。</p>
