--- a/OEBPS/Text/c086.xhtml
+++ b/OEBPS/Text/c086.xhtml
@@ -93,7 +93,7 @@
     <p>从门那边传来的是熟人的商人的声音。</p>
     <p>他就是曾经潜入迷宫时得到救助，通过教授巧克力和罐头制作方法而给梅赛德斯带来财富的小胖商人——三轮车。</p>
     <p>为了确认罗勒的视线，我点了点头。</p>
-    <p>作为梅赛德斯，为什么特拉伊努会在这里，我很在意。</p>
+    <p>作为梅赛德斯，为什么トライヌ会在这里，我很在意。</p>
     <p>而且他对梅赛德斯来说是贵重商人的相识，所以不能把这些东西砸得一塌糊涂。</p>
     <p>“呵呵，好久不见了，梅赛德斯大人。成长得越发美丽…………啊，不，好像还是很年轻的样子”</p>
     <p>“不要勉强说恭维话。我自己知道自己没有成长”</p>
