--- a/OEBPS/Text/c093.xhtml
+++ b/OEBPS/Text/c093.xhtml
@@ -89,7 +89,7 @@
     <p>实在是微不足道。</p>
     <p>梅赛德斯只能惊讶于尤利亚的嘴巴之轻。</p>
     <p>有趣地列举一个接一个协助『真正的王』的选民们的名字。</p>
-    <p>恐怕也有和特拉伊努一样对前任国王厌烦，借助自己的力量逃脱不了的人吧。</p>
+    <p>恐怕也有和トライヌ一样对前任国王厌烦，借助自己的力量逃脱不了的人吧。</p>
     <p>除此之外，也许还有几个人想借助我们的力量在之后吸取甜美的汁液。</p>
     <p>不管怎么说，这些选民就是他们的命根。</p>
     <p>无论迷宫的力量多么强大，拥有大量财富，如果没有选民，很难统一国家。</p>
