--- a/OEBPS/Text/c105.xhtml
+++ b/OEBPS/Text/c105.xhtml
@@ -48,7 +48,7 @@
     <p>我明白了即使掉下去也没关系。</p>
     <p>可是全体人员变成那样还不知道。</p>
     <p>如果只是以一定概率得救基本性地就那样死亡，也有这样的事。</p>
-    <p>因此，梅赛德斯确认了没有看到其他海报后，拿出九个蟑螂，将所有人踢落。</p>
+    <p>因此，梅赛德斯确认了没有看到其他seeker后，拿出九个蟑螂，将所有人踢落。</p>
     <p>因为用3尊也以1P也结束，实惠可以。很适合一次性使用。</p>
     <p>“咕嘟咕嘟！？”</p>
     <p>啃老族们一边叫苦一边掉下，此后暂且九体全体人员勒紧了。</p>
