欠月的梅赛德斯 第⑨章机翻提交

--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -106,7 +106,7 @@
     <p>·盖利佩·菲特消费点5（含武器7）</p>
     <p>・保罗夫・浏览消费点2</p>
     <p>・保罗夫消费点12</p>
-    <p>・华尔街果冻消费点9</p>
+    <p>・坏·果冻消费点9</p>
     <p>・月桂果冻消费点1</p>
     <p>・番薯果冻消费点11</p>
     <p>·泰格茨消费点55</p>
