--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -123,7 +123,7 @@
     <p>果然，有头绪的男人中没有像样的人。梅赛德斯再次这么想。</p>
     
     <p>【吉他果冻】</p>
-    <p>原本是华尔街果冻的果冻，由于过度锻炼而迷失了原型。</p>
+    <p>原本是坏·果冻的果冻，由于过度锻炼而迷失了原型。</p>
     <p>身高延伸到接近2米，肌肉分泌过多的肌肉果冻，乍一看也显得肥胖。</p>
     <p>被错认为是屁股的那样的胸果冻破裂了10pack的腹果冻。</p>
     <p>在圆木般的手足上，应该不存在的血管一样的什么浮现出来，在颤动。</p>
