--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -39,7 +39,7 @@
     <p>在日语中，“日本”在英语中也被称为“日本”。</p>
     <p>有关魔物的名字，倒不如说有能理解的部分。</p>
     <p>到现在遇到的魔物们，一部分确实与这边的语言体形不同的名字的人们也在。</p>
-    <p>华尔街·果冻、桔梗·橡皮等……这是吸血鬼以外的种族最初发现并命名的魔物吧。</p>
+    <p>坏··果冻、桔梗·橡皮等……这是吸血鬼以外的种族最初发现并命名的魔物吧。</p>
     <p>话虽如此，这两种语言似乎和erufe的语言有所不同……。</p>
     <p>再看委托书的话，注意到吸血鬼，Elfel不问胡乱pijon的捕获委托多的事。</p>
     <p>什么，有那么受欢迎吗？皮琼。</p>
