欠月的梅赛德斯 第十章机翻处理

--- a/OEBPS/Text/c053.xhtml
+++ b/OEBPS/Text/c053.xhtml
@@ -102,7 +102,7 @@
     <p>“如果能找到好的食材就好了。”</p>
     <p>我不会再插进修夫了。</p>
     <p>他双手装备着菜刀，完全迷失了方向性。</p>
-    <p>“普鲁普尔，是我不好的果冻。”</p>
+    <p>“噗噜噗噜，是我不好的果冻。”</p>
     <p>“好，走吧。”</p>
     <p>“我知道了！”</p>
     <p>让果冻先走，让陷阱调查。</p>
@@ -121,7 +121,7 @@
     <p>说起来，受到果冻攻击的事自己一次也没有。</p>
     <p>舒夫立刻接近了崩溃的羊。</p>
     <p>他用精彩的菜刀当场开始解体羊和拔血。</p>
-    <p>“普鲁普尔！赢了哦，主人！”</p>
+    <p>“噗噜噗噜！赢了哦，主人！”</p>
     <p>“好肉……软得几乎没有臭味。从小羊时期就开始吃好东西成长，非常棒的素材”</p>
     <p>摆好姿势呼吁胜利的果冻和，在那个横(侧)一边沉浸喜悦一边解体的sufu。</p>
     <p>面对这混乱的景象，梅赛德斯什么也说不出来。</p>
