--- a/OEBPS/Text/c057.xhtml
+++ b/OEBPS/Text/c057.xhtml
@@ -70,7 +70,7 @@
     <p>哥布林赫克斯是擅长魔法的哥布林，梅赛德斯所拥有的迷宫里没有比这更精通魔法的魔物。</p>
     <p>不管怎么说，这个迷宫尽是接近战斗的魔物。</p>
     <p>因为操纵火的魔物等也有本能处理的部分教师角色快要能了的魔物这个以外不在了。</p>
-    <p>“普鲁普尔。魔法是自己心中的玛娜给予命令外出，请外边的玛娜呼吁能种种的事的方法的事哟。</p>
+    <p>“噗噜噗噜。魔法是自己心中的玛娜给予命令外出，请外边的玛娜呼吁能种种的事的方法的事哟。</p>
     <p>世界这种东西大致来说都是马纳的，说是推动世界的力量也不过分”</p>
     <p>果冻用稍微阴郁的语调翻译哥布林赫克萨一边说一边解说。</p>
     <p>即使那样，从作为空想定一对的被打败角色的goburin教东西的日到没认为。</p>
