--- a/OEBPS/Text/c010.xhtml
+++ b/OEBPS/Text/c010.xhtml
@@ -12,81 +12,101 @@
 
 <body>
     <h1>10. 第二位伙伴</h1>
+    <p>变更了标题</p>
+    <p class="divline"></p>
     <p>在梅赛德斯他们面前出现了手持剑的骸骨。</p>
     <p>和以前梅赛德斯抢夺武器一样，是格利佩·菲特。</p>
-    <p>但是在阻挡他的同时，本凯一枪就把他打成两半，甚至没有进行战斗。</p>
+    <p>但是在阻挡他的同时，本凯一剑就把他打成两半，甚至没有进行战斗。</p>
     <p>是本凯强，还是魔物弱……不管怎么说，我知道了本凯如果是浅层的话是十分有用的。</p>
     <p>魔物登场的同时被本凯砍掉已经是第五次了。现在梅赛德斯没有进行战斗，顺利地进入了迷宫。</p>
     <p>格利佩·菲特回收掉落的剑，然后看盾。</p>
-    <p>“喂，本凯。反正你也拿一把盾吧。</p>
-    <p>好不容易有6只手臂，全部剑装备之类，可惜没有哟。装备更多不同的武器，做好各种准备”</p>
-    <p>“唔……原来如此”</p>
+    <p>“<span class="character">喂，本凯。反正你也拿一把盾吧。</span></p>
+    <p><span class="character">好不容易有六只手臂，却全部装备剑，太可惜了。装备更多不同的武器，做各种各样的事情吧”</span></p>
+    <p>“<span class="character">唔……原来如此”</span></p>
+    <br>
     <p>本凯有六只胳膊，在战斗中非常有利。</p>
     <p>虽然这么说，但是如果全部都拿着剑的话，也是徒劳有限度的。</p>
     <p>梅赛德斯想，应该多拿枪、盾、弓，使战术有幅度吧。</p>
     <p>本凯是不是也特别拘泥于剑，扔掉一把剑用盾代替。</p>
     <p>因为他扔掉的剑比格利佩·菲特的剑质量好，梅赛德斯从到现在使用的格利佩·菲特的剑变更为本凯的剑装备。盖利佩特的剑已经可以卖了吧。</p>
-    <p>如果强有力的武器到手之前的武器卖。这也是幻想的基本。</p>
+    <p>强有力的武器到手后把之前的武器卖掉。这也是幻想风的基本。</p>
     <p>此后二人也没有特别苦战的事，轻松地到十层跑破。出来的魔物几乎没有成为本凯的对手而散落，即使忍耐一发也因为梅赛德斯的追击而轻易倒下。</p>
     <p>然后是十一层。在这里终于遇到了另一个目的灰色的果冻。</p>
     <p>看上去确实是把灰色的果冻做成人形的奇怪的东西。胸中有球体，即使不喜欢也会引人注目。</p>
-    <p>“普鲁普尔，我是坏果冻。”</p>
-    <p>“那就不要客气了”</p>
+    <br>
+    <p>“<span class="character">噗噜噗噜，我是坏果冻。”</span></p>
+    <p>“<span class="character">那就不要客气了”</span></p>
+    <br>
     <p>一登场就被梅赛德斯的刀刃切断了果冻。</p>
     <p>马上果冻打算再生,不过，砍球体的话发呆不动了。</p>
-    <p>“为什么知道那个核心是弱点……”</p>
-    <p>「嘛，这类魔物的规定。不要和果冻说话”</p>
+    <br>
+    <p>“<span class="character">为什么知道那个核心是弱点……”</span></p>
+    <p>「<span class="character">嘛，这类魔物的规定。不要和果冻说话”</span></p>
+    <br>
     <p>这么易懂地预先暴露弱点为何什么都没有。</p>
     <p>梅赛德斯将不再动弹的果冻装入随身携带的袋子里。</p>
-    <p>意外地手感很好地，粘不上。</p>
+    <p>意外地手感很好地，也不粘手。</p>
     <p>尽管如此，提出这个委托的确是甜品店，难道是吃吗？</p>
-    <p>“那么，这样的话就可以完成委托了……好不容易。就这样到十二层去」</p>
-    <p>“要去捕捉施瓦尔茨·沃尔夫范拳吗”</p>
-    <p>「啊。今天做完这个就撤退”</p>
+    <br>
+    <p>“<span class="character">那么，这样的话就可以完成委托了……好不容易。就这样到十二层去」</span></p>
+    <p>“<span class="character">要去捕捉シュヴァルツ・ヴォルファング吗”</span></p>
+    <p>「<span class="character">啊。今天做完这个就撤退”</span></p>
+    <br>
     <p>超过十层后魔物的强度也进一步上升，一些能忍受着本凯的初击的人也开始出现。</p>
     <p>虽然那么说，还不是苦战的水平。光是本凯就可以轻松取胜吧。</p>
     <p>几乎不费力地到达十二阶层，寻找目的之狼。</p>
     <p>稍微徘徊的话，与狼男遭遇了虽然是遗憾但是稍微不同。</p>
-    <p>“瓦拉沃尔夫·罗特……拥有像火焰一样的凶猛和吐出火焰的力量的狼男。</p>
-    <p>很厉害，请小心”</p>
-    <p>「火焰啊。正好，是我不能使用的力量。</p>
-    <p>把这个东西抓住吧」</p>
-    <p>眼前猛烈的狼男身高190cm左右。</p>
+    <br>
+    <p><span class="character">“ヴァラヴォルフ・ロート……拥有像火焰一样的凶猛和吐出火焰的力量的狼男。</span></p>
+    <p> <span class="character">很厉害，请小心”</span></p>
+    <p><span class="character">「火焰啊。正好，是我不能使用的力量。</span></p>
+    <p><span class="character">把这个东西抓住吧」</span></p>
+    <p>眼前凶猛的狼男身高190cm左右。</p>
     <p>正如字面意思一样，大人和孩子的差别，但事到如今，梅赛德斯并不畏惧。</p>
     <p>以从容的表情按手指的关节，迈出一步。</p>
     <p>但是与此同时，感觉到有什么东西从迷宫深处突击而来的迹象，梅赛德斯和本凯马上回避了。</p>
-    <p>只有没有反应的保罗夫·罗托受到了什么突击，溅起血飞沫上半身消失。</p>
+    <p>只有没有反应的ヴァラヴォルフ・ロート受到了什么突击，溅起血飞沫上半身消失。</p>
     <p>二人回头看，在那里的是狼人的上半身被切断的黑色巨狼的身姿。</p>
-    <p>“这家伙吗？”</p>
-    <p>“是的，没错。”</p>
+    <br>
+    <p><span class="character">“这家伙吗？”</span></p>
+    <p><span class="character">“是的，没错。”</span></p>
+    <br>
     <p>听到本凯的回信，梅赛德斯露出了笑容。</p>
     <p>从目的地来，省去寻找的工夫。</p>
-    <p>瓦拉沃尔夫·罗特虽然有点遗憾，但是那份就由这家伙来弥补吧。</p>
-    <p>“咕噜咕噜……”</p>
+    <p>ヴァラヴォルフ・ロート虽然有点遗憾，但是那份就由这家伙来弥补吧。</p>
+    <br>
+    <p><span class="character">“咕噜噜……”</span></p>
+    <br>
     <p>巨大的狼龇着牙呻吟，盯着梅赛德斯。</p>
     <p>一走近梅赛德斯，就变成黑色的疾风向梅赛德斯扑去。</p>
     <p>与此相对，梅赛德斯一出手，就跳跃越过梅赛德斯，与此同时，梅赛德斯的肩膀也受到了冲击。</p>
     <p>衣服被稍微撕裂，露出肩膀梅赛德斯脸色没有变化。</p>
-    <p>“……真快啊」</p>
+    <br>
+    <p><span class="character">“……真快啊」</span></p>
+    <br>
     <p>立刻再生裂开的皮肤，转向狼。</p>
-    <p>本凯打算向前迈出脚步，但那是用手制止的。</p>
-    <p>今后必须教育上下关系，请自己以外打倒狼也不认可这边吧。</p>
+    <p>本凯打算向前迈出脚步，但制止了。</p>
+    <p>今后必须教育上下关系，被自己以外的人打倒的话，就算是狼也不会认同我们的吧。</p>
     <p>黑狼再次向着迈出的梅赛德斯跃进，再次被削减了皮肤。</p>
-    <p>再生回头，黑色的疾风不停地从四面八方刻下了梅赛德斯。</p>
+    <p>虽然再生后回头，但黑色的疾风并没有停止，从四面八方袭向了梅赛德斯</p>
+    <br>
     <p>“……”</p>
-    <p>与手臂，肩膀，侧腹，脚一边立一边被指甲一边撕裂梅赛德斯苦闷的声音一个不泄漏。</p>
+    <br>
+    <p>手臂、肩膀、侧腹、脚和指甲不断地被撕裂，梅赛德斯却一点也不漏出苦闷的声音。</p>
     <p>用排除了感情这个东西一样的冷的眼一边持续追赶黑狼的运动，确实持续防御对要害处的攻击。</p>
     <p>伤口等于没有。受到攻击的同时再生，而且慢慢受到攻击本身的次数减少。</p>
     <p>最初甘心接受的攻击也不知不觉变得能防御，几乎没使之直接攻击。</p>
     <p>这样的攻防持续了一分钟吧。不久，梅赛德斯眯起眼睛，对第十四次黑狼的袭击喃喃自语。</p>
-    <p>“——好，已经习惯了”</p>
+    <br>
+    <p><span class="character">“——好，已经习惯了”</span></p>
+    <br>
     <p>舍弃防御，微微移动身体，避开黑狼的獠牙。</p>
-    <p>把鼻子引入胸前的帖子，就这样轻轻地抚摸着毫无防备的鼻子。</p>
+    <p>将其引诱到胸前，就这样轻轻地抚摸着毫无防备的鼻子。</p>
     <p>黑狼惊讶地停止了行动，但梅赛德斯并不追击。</p>
-    <p>魔术控制……通过抓住狗的鼻子来告诉自己是比对方更高，拥有守护能力的人。</p>
+    <p>マズルコントロール……通过抓住狗的鼻子来告诉自己是比对方更高，拥有守护能力的人。</p>
     <p>母狗对孩子也有做的行为，如果很好地进行对狗的教育非常有效。</p>
     <p>但是，拼图控制如果勉强去做的话，会使恐怖心更加强烈。</p>
-    <p>为了想教育狗强行要求alpharu和muzuru控制，结果被狗讨厌了的饲主的话等新奇也没有。</p>
+    <p>为了想教育狗强行要求アルファロール和マズルコントロール控制，结果被狗讨厌了的饲主的也不是什么稀奇事。</p>
     <p>如果勉强去做那个成为恐怖，恐怖向所说的威胁和咬住的攻击行为发展恐吓。</p>
     <p>当然，也有因为恐惧而强制上下关系的教育……梅赛德斯没有选择那个。</p>
     <p>理想是教给上下级关系和力量关系的同时，不要让其感到恐惧。那是教养的基本。</p>
@@ -94,30 +114,32 @@
     <p>此后几次反复同样的事，不久黑狼是不是理解了力量的差变得老实了。</p>
     <p>同时，了解到梅赛德斯无害的事后敌意也消失了。</p>
     <p>梅赛德斯满足地抚摸着那样的黑狼。</p>
-    <p>「好，我回地上去。要好好地教训一下这家伙”</p>
+    <p><span class="character">「好，我回地上去。要好好地教训一下这家伙”</span></p>
     <p>就这样，让黑狼安然长大的梅赛德斯，就那样带回了黑狼。</p>
     <p class="divline"></p>
     <p>带着黑狼回来的梅赛德斯，首先从让黑狼相信自己开始了。</p>
     <p>如果告诉上下关系的话，下一次就建立信赖关系。基本的教育。</p>
     <p>另外，因为一直都很难叫到无名氏，所以给它起了个名字叫小黑。</p>
-    <p>一开始觉得施瓦尔茨也不错，但种族名是施瓦尔茨・沃夫格，却给施瓦茨起了个名字，这就等同于给霍莫·萨皮恩斯取个名字。</p>
+    <p>一开始觉得シュバルツ也不错，但种族名是シュヴァルツ・ヴォルファング，却给シュバルツ起了个名字，这就等同于给人取了“人”这个名字。</p>
+    <span class="comment translator">ホモ・サピエンス（Homo sapiens） 智人（学名：Homo sapiens），是人属下的唯一现存物种。形态特征比直立人更为进步。</span>
     <p>名字好像是忘记带着百万吨硬币从桥上掉下来的样子。</p>
     <p>所以梅赛德斯并没有特别想好名字于是命名为小黑了。</p>
-    <p>施瓦茨和小黑的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为库格尔施莱巴这种决战兵器名字的国家的语言相比。</p>
+    <p>シュバルツ和小黑的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为クーゲルシュライバー这种决战兵器名字的国家的语言相比。</p>
     <p>说点题外话，本凯和小黑却意外地被母亲和奶奶所接受。</p>
-    <p>为了不让母亲害怕，让他在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和小黑来，就这样普通地吃饭了。</p>
+    <p>为了不让母亲害怕，让他们在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和小黑来，就这样普通地吃饭了。</p>
     <p>到底是梅赛德斯的母亲吗。胆量不一般。</p>
+    <br>
     <p>トライヌ商会马上开始巧克力和罐头的销售，进行着大规模的宣传。</p>
     <p>巧克力作为应急食品，单纯因为其甜度而大受欢迎，卖得飞快。</p>
     <p>罐头虽然很好，但是和巧克力相比，销路很朴素。</p>
     <p>但是，它作为不腐烂、长期携带的食品而备受瞩目，销量也在一点点增长，所以今后也会这样吧。</p>
     <p>这是相当多的钱。</p>
     <p>如果顺利的话，买比现在住的地方更豪华的房子也不错。</p>
-    <p>干脆让母亲和祖母从这个城市逃出来，在别的城市开始新的人生，支援他们也不失为一种手段。</p>
+    <p>干脆让母亲和婆婆从这个城市逃出来，在别的城市开始新的人生，支援他们也不失为一种手段。</p>
     <p>虽然没见过父亲，但反正不是个好男人。</p>
     <p>为了这样的男人而断送人生实在是太可怜了。</p>
     <p>幸好妈妈看起来还很年轻很漂亮。从现在开始重新开始也不是不可能的吧。</p>
-    <p>如果能让母亲和祖母逃离这个城市，首先要达成最初的目标……也就是说，达成了从底部逃脱的目标。</p>
+    <p>如果能让母亲和婆婆逃离这个城市，首先要达成最初的目标……也就是说，达成了从底逃脱的目标。</p>
     <p>那样的话，梅赛德斯也能朝着下一个目标迈进吧。</p>
     <p>决定了如果在腐烂之前结束。决定继续走下去。</p>
     <p>决定了不后悔的生活方式，最后笑着死去。</p>
@@ -127,24 +149,28 @@
     <p>不，根本就不知道有没有那样的地方。也许没有。</p>
     <p>即使那样也不想停下来。</p>
     <p>即使道路的前方是黑暗的，我也不想止步后悔而死。</p>
+    <br>
     <p>——没有看到满月，结束了无聊的一生。</p>
     <p>梅赛德斯强烈地思考着。</p>
     <p>我和前世不同，是不同的存在。只是继承了记忆的他人。</p>
     <p>正因为我想如此坚强，所以才不选择和前世相同的道路。</p>
     <p>我不想做同样的死法。不想抱同样的后悔。</p>
     <p>所以要走……与前世不同，寻找属于自己的路。即使不知道那个在哪里。</p>
+    <br>
     <p>（如果让妈妈和老婆婆脱离了这个生活，接下来就要找目标了。</p>
     <p>我生存的理由……该走的路……最终找到它）</p>
+    <br>
     <p>说是全力跑过去</p>
     <p>不知道怎么走。</p>
     <p>所以先找那个吧。走自己的路，走到终点的时候会笑的。</p>
     <p>但是事情总是进展不顺利。</p>
     <p>下定决心的第二天……有着相同境遇的兄弟们接触</p>
     <p>梅赛德斯也没想到会发生那么坏的事情。</p>
+    <p class="divline"></p>
     <p>Q、是怎么带着本凯和小黑去迷宫和街道的？</p>
     <p>1、首先拿起本凯。</p>
     <p>2、施加重力阻断魔法投掷。</p>
     <p>3、梅赛德斯乘小黑。</p>
     <p>4、小黑跳跃本凯乘上</p>
-    <p>5、超现实主义</p>
+    <p>5、咻~~</p>
 </body>
