欠月的梅赛德斯 二三章复查处理

--- a/OEBPS/Text/c002.xhtml
+++ b/OEBPS/Text/c002.xhtml
@@ -94,7 +94,7 @@
     <p>那么，能够再生的吸血鬼的身体所发出的闹钟之小，并不是不可思议的事情。</p>
     <p class="divline"></p>
     <p>第三年。</p>
-    <p>这个世界似乎出乎意料地对**温柔。</p>
+    <p>这个世界似乎出乎意料地对笨蛋温柔。</p>
     <p>梅赛德斯所想到的自伤到底错过了什么结果了。</p>
     <p>越受伤，身体越能治愈，就越能得到耐性。</p>
     <p>即使是同样的伤口也能治愈的速度慢慢上升，如果深深地受伤身体也不认输，记住这一点，尽快再生。</p>
