--- a/OEBPS/Text/c003.xhtml
+++ b/OEBPS/Text/c003.xhtml
@@ -27,14 +27,15 @@
     <p>腕力极限，只能无力地把苹果捏碎，比100公斤重的东西从出生以来一次也没有拿过。</p>
     <p>即使全力奔跑，即使跑过100米也跑不到8秒。</p>
     <p>那样的，是特别无可取代的她,不过，脸的美丽灾难了。</p>
-    <p>有一天，偶然看到了拜访城市的伯恩哈特卿，并命令她在那天晚上的陪侍。</p>
+    <p>有一天，偶然造访城镇的伯恩哈特卿注意到了她，并命令她在那天晚上陪侍。</p>
     <p>老实说，完全不喜欢，虽然想拒绝，但对方是领主。反过来不知道会被干什么。</p>
-    <p>但是，因为一次的关系，孩子被困在了家里是最糟糕的。不知道和Fackin小子多少次在内心骂过我。</p>
+    <p>但是，因为一次的关系，而怀上了孩子被困在家里是最糟糕的。不知道多少次骂过那个不戴套的混蛋家伙。</p>
     <p>因此她成为了侧室，但对待她绝不是件好事。</p>
     <p>所谓“宅邸”就是被赋予徒有虚名的家，而与之隔离的结果只有一个负责照顾的人。</p>
     <p>至少在两层楼房里要求带游泳池和大浴场，结果被无视了。Gadem。</p>
     <p>菜是每天用最高级的牛肉做的牛排，虽然说只有半熟的牛肉才能烤熟，但是每天都不准备。不知为什么烤的程度也是全熟的。</p>
-    <p>我生气了，说不用再来了，结果真的不来了。真是个没出息的男人。</p>
+    <p>生气地说不用再来了，结果真的不来了。真是个没出息的男人。</p>
+    <br>
     <p>如此坚强又厚颜无耻的她有一个女儿。</p>
     <p>名字叫梅赛德斯，即使不偏袒父母，也是和自己一模一样可爱的女儿。</p>
     <p>我真的觉得自己的基因努力了真是太好了。如果产生了像丈夫一样的强势的话就会哭。</p>
@@ -61,7 +62,7 @@
     <p>面对失望的梅赛德斯，琉迪亚一边喝着咖啡一边悠然自得地回答。</p>
     <p>这就是令人吃惊的放任主义。或许只是如此地信任着女儿。</p>
     <p>琉迪亚把手放在女儿的头上，温柔地微笑着。</p>
-    <span class="character"><p>“我是那个**因斯**……不，因为巡回的恶劣，我变得不能自由生活了，但是你不同。</p>
+    <span class="character"><p>“我是那个混蛋家伙……不，因为巡回的恶劣，我变得不能自由生活了，但是你不同。</p>
     <p>你自由地生活吧。这是我的愿望”</p></span>
     <p>我不知道女儿在看什么，但我不想成为那个枷锁。</p>
     <p>被关在这样腐烂的笼子里的只有自己好。希望这孩子能自由地在天空中振翅高飞。</p>
