欠月的梅赛德斯 第十一章

--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -106,7 +106,7 @@
     <p>轰鸣一声，多米尼翁撞上了门，上半身埋在了门上。</p>
     <p>置他于不顾，在空中飞舞，正巧在位置上的阿什塔尔上着陆了。</p>
     <p>然后装作从口袋里拿出来的样子从迷宫里拿出用来捕获魔物的封石向多米尼翁投掷。</p>
-    <p>这是六年前鲍里斯为了召唤贝赛德而使用的封石，但梅赛德斯自己还是第一次使用。</p>
+    <p>这是六年前波利斯为了召唤贝赛德而使用的封石，但梅赛德斯自己还是第一次使用。</p>
     <p>被扔出去的封石毫无抵抗地吸入了多米尼安，然后回到了梅赛德斯的手中。</p>
     <p>在考验面前获得了优秀的支援角色。如果能很好地训练的话，在这次战斗中一定会有帮助的吧。</p>
     <p>梅赛德斯“路易菲……”</p>
