--- a/OEBPS/Text/c020.xhtml
+++ b/OEBPS/Text/c020.xhtml
@@ -50,7 +50,7 @@
     <p>从这样的她看来，梅赛德斯应该是从市井女人的腹中诞生的。以自大的态度对待，没有任何不可思议。</p>
     <p>然而，不知为什么，再次见面的她却采取了敬佩梅赛德斯的态度，原本应该有的蔑视的态度也消失了。她到底发生了什么？</p>
     <span class="character"><p>“那时候，我被迷住了。成为姐姐所拥有的力量。</p>
-    <p>比什么都，凛然的强者的风格。比起鲍里斯、菲利克斯哥哥，你才是最适合格鲁内瓦特这个名字的”</p></span>
+    <p>比什么都，凛然的强者的风格。比起波利斯、菲利克斯哥哥，你才是最适合格鲁内瓦特这个名字的”</p></span>
     <span class="character"><p>“不凑巧和没兴趣。那样的名字就送给长子吧」</p></span>
     <span class="character"><p>“是吧。所以才故意输给胜利的战斗的吧？”</p></span>
     <p>梅赛德斯看向莫尼卡。</p>
