欠月的梅赛德斯 12,13章机翻处理

--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -17,7 +17,7 @@
     <p>这个金额大致是，在大人没有性命的情况下从事有实惠的工作，半年左右就能赚到的金额。</p>
     <p>但是这个世界上当然没有工薪阶层，所以不知道真正意义上的平均收入。</p>
     <p>“啊，谢谢。但是这样能收到吗……？”</p>
-    <p>「啊。那是你赚来的正当报酬”</p>
+    <p>「没问题。那是你赚来的正当报酬”</p>
     <p>如果有这笔钱得到玛吉特的话，应该可以暂时无问题地生活吧。</p>
     <p>她妈妈也能吃到好吃的东西。</p>
     <p>但是反过来说，这样就结束了，过了几个月又会变成原来的样子。</p>
