--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -58,7 +58,7 @@
     <p>譬如包围敌人有效,不过，围在forgera等的天空能飞的对方意义也薄。</p>
     <p>倒不如说对方方的战术，说不定有硬使之包围之后瞄准射击这样的东西。</p>
     <p>实际技巧是对学生们的模拟战和教师的训练。并且有把弱魔物作为对手的实战等。</p>
-    <p>作为梅赛德斯，预想着从史塔克迷宫一层出来了的鼹鼠的魔物程度的强度,不过，实际上课出来了的是快要放松的那样弱的，狼男。</p>
+    <p>作为梅赛德斯，预想着从斯塔克迷宫一层出来了的鼹鼠的魔物程度的强度,不过，实际上课出来了的是快要放松的那样弱的，狼男。</p>
     <p>比以前捕获的保罗沃尔夫·布朗小一圈，只有与孩子同样的身高。</p>
     <p>以这个魔物为对手，在课堂上学到的技能等都需要考验。</p>
     <p>魔物恐怕是依靠seeker工会等得到的吧。</p>
