--- a/OEBPS/Text/c057.xhtml
+++ b/OEBPS/Text/c057.xhtml
@@ -65,7 +65,7 @@
     <p>但是，如果因为自己的资质而放弃了伸长的话，那么就会停下脚步。</p>
     <p>如果太晚的话，晚点也没关系。即使如此，只要继续走下去，就能向前进。</p>
     <p>不停止的事。继续前进。只有那个是现在能做到的事。</p>
-    <p>在那里，梅赛德斯只要一有空就去史塔克迷宫内，在那里进行魔法的训练。</p>
+    <p>在那里，梅赛德斯只要一有空就去斯塔克迷宫内，在那里进行魔法的训练。</p>
     <p>教师角色安上goburinhekuser，因为他不能说作为翻译果冻也放在附近。</p>
     <p>哥布林赫克斯是擅长魔法的哥布林，梅赛德斯所拥有的迷宫里没有比这更精通魔法的魔物。</p>
     <p>不管怎么说，这个迷宫尽是接近战斗的魔物。</p>
