欠月的梅赛德斯 第十四章机翻处理

--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -131,14 +131,14 @@
     <div class="missioncard">
         <p>【突破迷宫、泉调查】</p>
         <p>委托人：seeker工会</p>
-        <p>报酬额：8000蛙</p>
+        <p>报酬额：8000Elka</p>
         <p>期限：两周</p>
         <p>详细：斯塔克迷宫2F的泉水有恢复的效果，为了研究请取水。</p>
     </div>
     <div class="missioncard">
         <p>【斯塔克迷宫、地图绘制】</p>
         <p>委托人：seeker工会</p>
-        <p>报酬额：5000蛙～</p>
+        <p>报酬额：5000Elka～</p>
         <p>期限：一周</p>
         <p>详细：前几天出现的修塔克迷宫地图还没有完成。</p>
         <p>为了能尽快制作地图，请给我地图。</p>
