--- a/OEBPS/Text/c025.xhtml
+++ b/OEBPS/Text/c025.xhtml
@@ -35,7 +35,7 @@
     <p>回到家中的贝泽代蒙立刻开始着手烹调，首先加热了土豆。</p>
     <p>把洋葱切成碎末，刚才买的橡皮肉也切碎。</p>
     <p>在Plactis迷宫中出现的鸟型魔物“Reckafun”的蛋搅拌，调味时用盐和胡椒进行。</p>
-    <p>胡椒在一年前是既贵重又昂贵的东西，但是由于三角洲商会发布罐头价格暴跌，现在已经在一般市场上买到了。</p>
+    <p>胡椒在一年前是既贵重又昂贵的东西，但是由于トライヌ商会发布罐头价格暴跌，现在已经在一般市场上买到了。</p>
     <p>尽管如此还是很贵，但是想到以前的价值，却看不到踪影。</p>
     <p>用平底锅炒土豆，上色后放土豆，下次和香葱一起炒洋葱。</p>
     <p>洋葱变成糖色后，再放入土豆，倒入蛋液，在某种程度上凝固的地方整理好形状，快速地移到盘子里。</p>
