--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -13,123 +13,127 @@
 <body>
     <h1>14. 战力强化</h1>
     <p>离开行会的梅赛德斯从报酬中减去一半，交给了玛吉特。</p>
-    <p>112万5千蛙。这是梅赛德斯和玛吉特的金额。</p>
+    <p>112万5千Elka。这是梅赛德斯和玛吉特的金额。</p>
     <p>这个金额大致是，在大人没有性命的情况下从事有实惠的工作，半年左右就能赚到的金额。</p>
     <p>但是这个世界上当然没有工薪阶层，所以不知道真正意义上的平均收入。</p>
-    <p>“啊，谢谢。但是这样能收到吗……？”</p>
-    <p>「没问题。那是你赚来的正当报酬”</p>
-    <p>如果有这笔钱得到玛吉特的话，应该可以暂时无问题地生活吧。</p>
+    <p>“ <span class="character">啊，谢谢。但是这样拿走真的可以吗……？</span>”</p>
+    <p>「 <span class="character">没问题。那是你赚来的正当报酬</span>”</p>
+    <p>玛吉特得到了这笔钱的话，应该可以暂时无问题地生活吧。</p>
     <p>她妈妈也能吃到好吃的东西。</p>
     <p>但是反过来说，这样就结束了，过了几个月又会变成原来的样子。</p>
     <p>所以，这里还没有结束。</p>
     <p>这只是为了应付眼前的钱。</p>
-    <p>“首先用这笔钱买点吃的东西吧。想让妈妈吃好吃的东西吧？”</p>
-    <p>“嗯！”</p>
+    <p>“ <span class="character">首先用这笔钱买点吃的东西吧。想让妈妈吃好吃的东西吧？</span>”</p>
+    <p>“ <span class="character">嗯！</span>”</p>
     <p>梅赛德斯带着玛吉特去大型杂货店。</p>
     <p>然后买了食材，结算了。</p>
-    <p>但是买食材的只有玛吉特，梅赛德斯他们只是在看。</p>
+    <p>但是买食材的只有玛吉特，梅赛德斯他们只是在旁边看着。</p>
     <p>想买奇怪的东西的时候会从旁边插嘴，但基本上是让她做。</p>
-    <p>被提问的话就回答，但只要不被提问，并不一定要说那个好。</p>
+    <p>被提问的话就回答，不提问时也就不会说哪个更好。</p>
     <p>玛吉特好像也知道这一点，虽然笨手笨脚，但还是拼命挑选哪种食材比较好，最后买完了东西。</p>
     <p>结束之后，梅赛德斯又让玛吉特买了一本书。</p>
-    <p>名字是《猴子也能懂的简单的文字读写方法 作者·大猩猩》。只有冲锋。</p>
+    <p>作为临时教材的书的名字是《猴子也能懂的简单的文字读写方法 作者·大猩猩》。<span class="comment translator">突込み所しかない</span></p>
     <p>虽然名字很糟糕，但是是关于字的读法被详细写了的学习用书。</p>
     <p>以前，梅赛德斯认为这个世界的书没有插图，但也许这是唯一带插图的书。</p>
     <p>当然画什么的完全没有,不过，能说因为易懂地画着图等某种意义插图。</p>
     <p>梅赛德斯也在家里用同样的书记住了文字。真想和这位作者见一面。</p>
-    <p>“这样就能读写文字了。那样的话就能从事代书人的工作。</p>
-    <p>代书人除了做seeker、雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
+    <p>“ <span class="character">这样就能读写文字了。那样的话就能从事代书人的工作。</span></p>
+    <p> <span class="character">代书人除了做seeker、雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</span></p>
     <p>梅赛德斯推荐玛吉特赚钱的工作被称作代书人。</p>
-    <p>这是代写各种文件、情书、请愿书等的工作，识字率并不是很高，在这个世界上可以挣很多钱。</p>
-    <p>在现代社会，不像日本那样谁都能读写文字，而写文字的工作是非常有必要的。</p>
-    <p>他们主要是拉着摊子在街上工作，其中也有不动工地通过中介接受工作的人。</p>
-    <p>玛吉特外表看起来太幼稚了，不善于让她自己在路边摊上走来走去的话，只能是流氓的好食物。</p>
-    <p>所以梅赛德斯一边让谁做中间人，一边想让她做代书人。</p>
+    <p>这是代写各种文件、情书、请愿书等的工作，在这个识字率并不是很高的世界上可以挣很多钱。</p>
+    <p>不像在现代日本那样谁都能读写文字的社会，而代书的工作是非常有必要的。</p>
+    <p>他们主要是拉着摊子在街上工作，其中也有不离开工作场所，通过中介接受工作的人。</p>
+    <p>玛吉特外表看起来太幼稚了，如果她自己在路边摊上走来走去的话，那只会是流氓的好食物。</p>
+    <p>所以梅赛德斯想让谁做中介来以成为代书人。</p>
     <p>如果顺利的话，她可以安定地赚钱，即使被父亲抛弃也能活下去吧。</p>
-    <p>“我也偶尔会去那里教你，但并不是随时都能去。</p>
-    <p>一开始要尝试到自己能做的地方去……能做到吗？</p>
-    <p>“唔，嗯。我会努力的”</p>
-    <p>“好吧，回答得很好。”</p>
+    <p>“<span class="character">我也偶尔会去那里教你，但并不是随时都能去。</span></p>
+    <p><span class="character">一开始要尝试到自己能做的地方去……能做到吗？</span></p>
+    <p>“<span class="character">唔，嗯。我会努力的”</span></p>
+    <p>“<span class="character">好吧，回答得很好。”</span></p>
     <p>之后，梅赛德斯把她送到家里，那天如宣言的那样，没有任何帮助就踏上了归途。</p>
     <p>首先自己试着做。在此基础上了解她的记忆速度，制定计划。</p>
     <p>突然帮助她的事是破坏她自身成长的行为。首先应该让自己做到自己能做到的地方。</p>
     <p>虽然看起来很冷淡，但这也是梅赛德斯式的关怀。</p>
     <p class="divline"></p>
-    <p>从三角洲商会那里收到了一部分通过巧克力和罐头获得的销售额。</p>
+    <p>从トライヌ商会那里收到了一部分通过巧克力和罐头获得的销售额。</p>
     <p>……总额超过了数亿Elka。那个男人到底卖了多少钱？</p>
-    <p>因为根据契约梅赛德斯成为销售额的一成，最低也得到数十亿特伊努商会。</p>
+    <p>因为根据契约梅赛德斯成为销售额的一成，トライヌ商会至少也赚了数十亿。</p>
     <p>只听那个的话可能会觉得少。比如说，在日本，情人节巧克力的年销售额高达五百亿。</p>
     <p>但正是因为日本人口众多。</p>
     <p>这个布鲁特的确是个大城市，但是没有日本那么多人口。</p>
-    <p>话说回来，日本对那么狭小的岛国应该过于密集，姑且不论，这个布鲁特的总人口大约有10万人左右。</p>
+    <p>话说回来，日本那么狭小的岛国里人口过于密集姑且不论，这个布鲁特的总人口大约有10万人左右。</p>
     <p>并不是很少。考虑文化什么的话反而太多了。</p>
-    <p>据说在中世纪，德国是最大规模的城市，其人口也仅有3万人左右，其他城市甚至在5000以下，多的地方也最好能达到1万。</p>
+    <p>据说在中世纪，德国即使是最大规模的城市，其人口也最多3万人左右，其他城市的人口在5千以下，多的地方也只要达到1万就很高了了。</p>
     <p>这也影响了当时死亡率的高度，和平且物资丰富，因为不会死那么多人，所以会持续增加。</p>
-    <p>从这个意义上来说，一个城市有10万人破格了。没有死得惊人。</p>
-    <p>即使在这个魔物存在的世界，比起中世纪的西洋，死亡率低的附近，也算是吸血鬼吧。</p>
+    <p>从这个意义上来说，一个城市有10万人破格了。没有死得惊人的事情。</p>
+    <p>即使在这个魔物存在的世界，该说不愧是吸血鬼吗，与中世纪时代的西洋相比死亡率如此低。</p>
     <p>但是和现代相比还是很少。</p>
     <p>在这样的人口只有十万人的城市，而且在这短时间内销售额超过数十亿不是寻常的事情。</p>
-    <p>现在由于稀奇的初回销售提高挂上(放上)着，暂且销售额也安定尝试狗很好地也做了。</p>
+    <p>现在由于稀奇的初回销售提高挂上(放上)着，过一段时间销售额应该也会安定下来，但トライヌ也做得很好。</p>
     <p>将目标完全集中在贵族身上，全体让贵族争购吧。</p>
     <p>（恐怕也有为了显示自己的资产而抢购的贵族。）</p>
-    <p>一块板状巧克力以一万只Elka的猎获价格出售，如果单纯卖出一万枚的话，就达到一亿只Elka的销售额。</p>
+    <p>一块板状巧克力以一万Elka的猎获价格出售，如果单纯卖出一万枚的话，就达到一亿Elka的销售额。</p>
     <p>在这个城市里，贵族只有百人左右，除了梅赛德斯的父亲——伯恩哈特卿以外，都是没有领土的法衣贵族。</p>
     <p>那倒是。拥有并管理这块土地的是格鲁内瓦特家，除此之外拥有领土的贵族不可能在这块土地上。</p>
     <p>但即便如此，贵族还是贵族。因为比一般人更有钱，所以只有那样的人才想炫耀自己的财力。</p>
-    <p>大概是这些人抢购、大量购买的结果。</p>
+    <p>这样惊人的数据大概就是这些人抢购、大量购买的结果。</p>
     <p>总而言之只是野鸭。</p>
+    <p><span class="comment translator">カモ 1. 野鸭; 2. 容易上当受骗或被奸商坑的人的俗称</span></p>
     <p>罐头果然不如巧克力卖得好。</p>
-    <p>但是一部分的标志车和其他商人注意到了它的价值，于是买了。</p>
+    <p>但是一部分的seeker和其他商人注意到了它的价值而买入了。</p>
     <p>之后……虽然不太喜欢，但是可以预测，哪种商品都有以转卖为目的而大量购买的商人。</p>
-    <p>卖主应该死，没有慈悲。</p>
-    <p>“这样资金就准备好了。装备也进行了新调整，这次一定要以最下层为目标吗？”</p>
+    <p>黄牛必死无慈悲。</p>
+    <p>“ <span class="character">这样资金就准备好了。装备也进行了新调整，这次一定要以最下层为目标吗？</span>”</p>
     <p>既然到了这个地步，就没有必要吝啬装备品的货款了。</p>
-    <p>不把钱放在眼线上就能优先购买性能。</p>
-    <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。浪费钱。</p>
+    <p>不把钱放在首位上就能优先考虑性能。</p>
+    <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。纯粹浪费钱。</p>
     <p>看起来很朴素也没关系。不管怎样追求性能和机能美的装备拘泥。</p>
     <br>
-    <p>“上街了，本凯，小黑。也改变你们的装备吧」</p>
+    <p>“ <span class="character">上街了，本凯，小黑。你们的装备也更新一下吧</span>」</p>
     <br>
     <p>带着本凯和小黑在城市里巡回，巡视着各种各样的武器。</p>
-    <p>首先，到目前为止使用的武器没有一个例外全部卖掉。已经不需要这些了。</p>
-    <p>然后首先梅赛德斯买了自己用的哈尔巴德。</p>
-    <p>与自己的战斗风格商量，从最初开始考虑作为爱用的武器是锤子还是斧子。</p>
+    <p>首先把到目前为止使用的武器没有一个例外地全部卖掉。已经不需要这些了。</p>
+    <p>然后梅赛德斯买了自己用的哈尔巴德。</p>
+    <p><span class="comment translator">ハルバード wiki:斧枪是一种双手持握的长柄武器，在十四及十五世纪时最为风行。这个字有可能是来自德文字Halm与Barte，现在德语称此为Hellebarde。斧枪以大钉将斧刃固定在柄头，通常有钩或刺在斧刃的背面，这可以用来钩住骑兵， 斧枪通常长1.5至1.8米。 斧枪与中国的戟并不相同，斧枪是斧与枪的结合，而戟则是戈与矛/枪的结合。</span></p>
+    <p>以自己的战斗风格来说，从最初开始考虑作为爱用的武器是锤子还是斧子。</p>
     <p>用力敲打的武器和重力魔法的搭配也很好。</p>
     <p>但是，梅赛德斯也有必要弥补“短距离”这一弱点。不知道以后会不会成长，但是因为是吸血鬼，弄不好可能会就这样以孩子的姿态迎接不老期。</p>
     <p>这样一来，还是需要弥补这种能力不足的武器。</p>
     <p>如果是这样的话，理想是枪，但是枪不是凭借力量来击打的武器，所以相性很差。</p>
-    <p>剑没关系。我用了一会儿才知道，但感觉不合适。</p>
-    <p>在那里我注意到了哈尔巴德。</p>
-    <p>持枪的长度和斧头锋利，重量与自己的战斗风格相符。</p>
+    <p>剑倒也行。但是用了一会儿才知道，但感觉不合适。</p>
+    <p>在那里注意到的是哈尔巴德。</p>
+    <p>带有枪的长度与斧头的锋利，重量与自己的战斗风格相符。</p>
     <p>设计比什么都好。</p>
     <p>在白兵战黄金时代中诞生的智者智慧和愚者愚蠢的集合体似的全方位引人入胜。</p>
-    <p>枪很长,不过，不仅仅是刺也想要斩。</p>
+    <p>枪很长是挺不错,不仅仅是刺也想要斩。</p>
     <p>因为如果对方带着铠甲和头盔会很麻烦，所以也想要破坏它的钩爪。</p>
     <p>对了，全部粘在一起不是最强吗？</p>
     <p>我不知道是否真的产生了这种愚蠢的想法，但梅赛德斯甚至认为混杂着这种聪明和头脑不好的哈尔巴德的设计很美。</p>
     <p>总而言之，有九成左右是由设计决定的。</p>
-    <p>一一拿到手，决定最手适应了的红的哈尔巴德。</p>
+    <p>一把一把地试过去，决定要最适应了的红的哈尔巴德。</p>
     <p>名为《哈尔巴德·乌尔扎特》。据说这是在太古时代，降落到这个星球上的众神所使用的被认为是最硬的物质的绝品。但是因为那个没现存实际好象用另外的素材制造着。是严重的名字欺诈。</p>
+    <p><span class="comment translator">ウルツァイト 只能找到个wurtzite[纤锌],似乎没有提到它的硬度,也只搜到在碧蓝幻想里有一把ウルツァイトサイズ[纤锌大镰]。钨的话是tungsten,金刚石是diamond,石墨烯graphene似乎都对不上</span></p>
     <p>长度有大人的吸血鬼那么大，刀刃部分像人一击就能做到两半那么大。</p>
     <p>而且很重。太重了，沉得谁都不买。</p>
     <p>但是梅赛德斯买了那个。一只手拿起时，店主的脸稍微有点值得看。</p>
     <p>接下来是外套。</p>
-    <p>选择了与至今为止的黑大衣相似的设计的东西，选择对刃性出色的东西购买了。</p>
-    <p>大衣下面的背心没有变化。因为我们行动方便也没有特别不满，只是作为预备购买了几件新的东西。</p>
-    <p>或者说，高防具都是非常漂亮的铠甲，杀掉作为梅赛德斯武器的轻装是难点。而且尺寸也不合适。</p>
+    <p>选择了与至今为止的黑大衣相似的设计并且对刃性能出色的东西。</p>
+    <p>大衣下面的背心没有变化。因为自己行动也方便也没有特别不满，只是作为预备购买了几件新的东西。</p>
+    <p>或者说，好防具都是非常漂亮的铠甲，以作为梅赛德斯武器的轻装是难点。而且尺寸也不合适。</p>
     <p>整理好自己的装备，接下来是本凯。</p>
-    <p>我给本凯买了一件自己穿不起的黑色铠甲。</p>
-    <p>再加上他有六个手臂，所以购买保护另外手臂的Guntlet等装备。</p>
-    <p>并且头盔是Fulface。每次走在街上，都会被目不转睛地盯着拐角，所以也有隐藏它的意思……也感到过分看起来突出的心情。</p>
+    <p>给本凯买了一件自己穿不了的黑色铠甲。</p>
+    <p>再加上他有六个手臂，所以购买了保护另外手臂的护手等装备。</p>
+    <p><span class="comment translator">ガントレット gauntlet[护手]</span></p>
+    <p>并且头盔是全脸型的。每次走在街上，都会被目不转睛地盯着拐角，所以也有隐藏它的意思……也感到过分看起来突出的心情。</p>
     <p>结果变成了走路的铠甲,不过，因为他不是速度类型，用防具坚固地凝固正好好。</p>
-    <p>而且好像这种程度的重量不苦，像以前那样轻快地走着。</p>
-    <p>先把武器全装上去买了很多。</p>
+    <p>而且好像这种程度的重量也不会感到什么幸苦，像以前那样轻快地走着。</p>
+    <p>武器则是全装上去买了很多。</p>
     <p>今后，可以根据委托的内容改变他的装备。</p>
-    <p>小黑的装备是……大大的狼用铠甲也有的事,不过，因为反过来快要阻碍运动了预先留下。</p>
+    <p>小黑的装备是……虽然有大个的狼用铠甲,但是因为反过来快要阻碍运动了所以保留。</p>
     <br>
     <p>装备结束后接下来就是消耗品。</p>
-    <p>因为已经有食物，所以要扔掉，寻找恢复用的道具。</p>
-    <p>如果这个世界使用方便HP用快攻象恢复一样的药和药草等没有。</p>
+    <p>因为已经有食物了就直接跳过，寻找恢复用的道具。</p>
+    <p>这个世界上没有能快速回复HP的药和药草</p>
     <p>暂且有一种名为药品的药品，只是一种伤药。当然没有即效性。</p>
     <p>但是在这个世界上，魔石是封闭魔法的便利之物。</p>
     <p>也就是说，当然也有关闭了恢复魔法的魔石，这样的东西在seeker里很受欢迎。</p>
@@ -137,20 +141,20 @@
     <p>强力的冻结魔法的魔石、炎之魔石、水之魔石等，主要以自己不能使用的东西为主。</p>
     <p>因为行李增加了，再买一个大型背包，这边让小黑拿。</p>
     <br>
-    <p>“主，我有建议”</p>
-    <p>“什么？”</p>
-    <p>“我们有时也会成为主人的剑而战斗。但是如果一直拿着这样的东西就无法全力以赴了。</p>
-    <p>于是，是不是应该重新加入只负责托运行李的成员呢？”</p>
-    <p>“嗯。的确”</p>
+    <p>“<span class="character">主，我有建议”</span></p>
+    <p>“<span class="character">什么？”</span></p>
+    <p>“<span class="character">我们有时也会成为主人的剑而战斗。但是如果一直拿着这样的东西就无法全力以赴了。</span></p>
+    <p><span class="character">于是，是不是应该重新加入只负责托运行李的成员呢？”</span></p>
+    <p>“<span class="character">嗯。的确”</span></p>
     <br>
     <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把本凯拉了进去。</p>
     <p>可是本凯总觉得是战斗力。可以正常使用。</p>
-    <p>小黑的速度很快，是能载着梅赛德斯战斗的战力。让别人拿行李不是明智的事情。</p>
+    <p>小黑的速度很快，是能载着梅赛德斯战斗的战力。拿行李不是明智的事情。</p>
     <br>
-    <p>“确实想要不参加战斗而专心拿着行李的成员。</p>
-    <p>知道了。去宠物店吧”</p>
+    <p><span class="character">确实想要不参加战斗而专心拿着行李的成员。</span></p>
+    <p><span class="character">知道了。去宠物店吧”</span></p>
     <br>
-    <p>梅赛德斯到以前增加伙伴的时候潜入到迷宫自己捕获着。</p>
+    <p>梅赛德斯在以前要增加伙伴的时候都是潜入到迷宫亲自捕获。</p>
     <p>但那是因为没有钱。</p>
     <p>如果有钱的话，就不会特意花费那样的工夫了。</p>
     <p>如果想要战斗力的话，可以自己潜入深层去捕获，但如果只是随身携带行李的程度的话，宠物店的魔物就足够了。</p>
@@ -158,12 +162,8 @@
     <p>另外，当然化身为步行铠甲的本凯非常引人注目。</p>
     <p class="divline"></p>
     <p>トライヌ「不……不……敲诈什么的……哪里的话……嘿！</p>
-
     <p>价格很合理……良心大大的……！</p>
-
     <p>这个价格也能卖……像飞一样……！停不下来……笑……！</p>
-
     <p>コココ……カカカ……！」</p>
-
     <p>梅赛德斯（这家伙，这是本性吗？）</p>
 </body>
