欠月的梅赛德斯 第十五章机翻

--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -140,7 +140,7 @@
         <p>委托人：seeker工会</p>
         <p>报酬额：5000Elka～</p>
         <p>期限：一周</p>
-        <p>详细：前几天出现的修塔克迷宫地图还没有完成。</p>
+        <p>详细：前几天出现的斯塔克迷宫地图还没有完成。</p>
         <p>为了能尽快制作地图，请给我地图。</p>
     </div>
     <p>在几个委托中梅赛德斯注意到的是这三个。</p>
