--- a/OEBPS/Text/c009.xhtml
+++ b/OEBPS/Text/c009.xhtml
@@ -131,7 +131,7 @@
     <br>
     <p>照相机早早地死心，梅赛德斯此次也潜藏着到迷宫。</p>
     <p>和以往不同，这次是本凯拿着灯笼和背包，所以除了武器以外什么都不用拿也挺开心的。</p>
-    <p>今后将挑战各种各样的迷宫，但梅赛德思索着首先要用这个修塔克迷宫。</p>
+    <p>今后将挑战各种各样的迷宫，但梅赛德思索着首先要用这个斯塔克迷宫。</p>
     <p>魔物也想再捕获一体或二体左右作为伙伴，在这里赚取强有力的武器也预先得到。</p>
     <p>梅赛德斯目前的目的是从父亲那里独立出来，养育母亲和婆婆。</p>
     <p>为此，立足点也必须稳固。</p>
