--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -99,10 +99,10 @@
     <p>然后，梅赛德斯立刻就把它卖给了seeker王。</p>
     <p>“<span class="character">想卖写有魔物情报的纸。如果是你的话要给多少价钱？</span></p>
     <p>「<span class="character">啊，哪个……嗯，嗯嗯……这个很有趣。一眼就能看出画上是什么样的魔物。</span></p>
-    <p><span class="character">那个修塔克迷宫是魔物的平均战斗力高的高难度迷宫。这个是有需要的。尤其是下层的魔物情报非常难得”</span></p>
+    <p><span class="character">那个斯塔克迷宫是魔物的平均战斗力高的高难度迷宫。这个是有需要的。尤其是下层的魔物情报非常难得”</span></p>
     <p>“<span class="character">高难度？”</span></p>
     <p>看到画有魔物情报的纸很高兴地说着接待员，他的话对梅赛德斯来说是轻微的惊讶。</p>
-    <p>作为梅赛德斯自身的认识，修塔克迷宫被认为是面向初学者的薄弱迷宫。</p>
+    <p>作为梅赛德斯自身的认识，斯塔克迷宫被认为是面向初学者的薄弱迷宫。</p>
     <p>并不是谁那样说的,不过，因为在街附近，更加F等级也潜的事被容许自然那样考虑。</p>
     <p>可是偶然，试着看公告牌的话到稍微前是F等级的委托的迷宫内的泉调查的委托不知为何变成了C等级的委托。</p>
     <p>“<span class="character">……啊，我的时候和拜托的难易度不一样吗？”</span></p>
