--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -47,7 +47,7 @@
     <p class="divline"></p>
     <p>“茨瓦尔夫。请告诉我们迷宫攻略者本人和子孙之间使用的机能差异”</p>
     <p>《是的，主人》</p>
-    <p>结束了与伯恩哈特的谈话的梅赛德斯，在返回学园之前把自己关进了修塔克迷宫中。</p>
+    <p>结束了与伯恩哈特的谈话的梅赛德斯，在返回学园之前把自己关进了斯塔克迷宫中。</p>
     <p>如果处理主钥匙的梅赛德斯本人没有解冻迷宫就进去了，当然会被外面放置主钥匙。</p>
     <p>这个时候，主人钥匙作为防盗的自我防卫机能把洞内的岩石等拿出来，由于那个内侧填埋自己从外边变得看不见。</p>
     <p>简单来说，就是以变成状态来隐瞒自己。</p>
@@ -64,7 +64,7 @@
     <p>“比如……这里的舒夫和阿修塔尔登记，能批量生产这样的事吗？”</p>
     <p>“是的，可以。要注册吗？”</p>
     <p>“……预先准备吧」</p>
-    <p>贝赛德兽和阿修塔尔，都是修塔克迷宫里没有的魔物。</p>
+    <p>贝赛德兽和阿修塔尔，都是斯塔克迷宫里没有的魔物。</p>
     <p>而且因为双方都有很高的战斗力，如果增加的话增加的话没有损失。</p>
     <p>但是因为只想批量生产舒夫变得异怪，批量生产还没做。</p>
     <p>“我问，重新注册本凯，会不会增加呢？”</p>
