--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -109,7 +109,7 @@
     <p>那么让她倒下是什么意思呢？</p>
     <p>梅赛德斯比贝尔特里克斯更早地提出了答案。</p>
     <p>“ツヴェルフ”</p>
-    <p>“是的，启动上位权限……在这里的魔物，注册到修塔克迷宫”</p>
+    <p>“是的，启动上位权限……在这里的魔物，注册到斯塔克迷宫”</p>
     <p>“解冻……然后压缩！”</p>
     <p>与梅赛德斯宣言同时发生的变化是戏剧性的。</p>
     <p>贝阿朵利克斯发出的魔物全部，被收藏了到梅赛德斯有的哈尔巴德的。</p>
