--- a/OEBPS/Text/c081.xhtml
+++ b/OEBPS/Text/c081.xhtml
@@ -35,7 +35,7 @@
     <p>两者都有利，两者都有不便。</p>
     <p>如果合并的话，不管怎么说管理都很轻松。</p>
     <p>随身携带的洞窟钥匙一个也好，能自由出入二分的洞窟的魔物。</p>
-    <p>积分也会被合并，所以可以使用现在得到的迷宫的要点量产修塔克迷宫的魔物。</p>
+    <p>积分也会被合并，所以可以使用现在得到的迷宫的要点量产斯塔克迷宫的魔物。</p>
     <p>因为是帝国代代相传的王剑，积攒了很多要点，相当有魅力。</p>
     <p>缺点就是，错过增加迷宫钥匙这种强有力的武器的机会吗？</p>
     <p>就算不放出魔物，但只要是绝对不会破坏的武器，迷宫钥匙就很强。</p>
