--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -73,7 +73,7 @@
     <p>“……是吗？”</p>
     <p>这次，迷宫在村子里是因为梅赛德斯。</p>
     <p>但是这样的话有点麻烦。</p>
-    <p>在修塔克迷宫通关时，周围没有目击者，但在村落内被目击的可能性很高。</p>
+    <p>在斯塔克迷宫通关时，周围没有目击者，但在村落内被目击的可能性很高。</p>
     <p>离开行会走向迷宫，梅赛德斯痛感很有可能。</p>
     <p>……有岗哨的士兵。</p>
     <p>那个恐怕也有魔物从迷宫出来的时候迅速处理的任务吧,不过，应该兼任谁清除的时候看那个人物的作用。</p>
