--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -18,94 +18,94 @@
     <p>当然，这并不是不可以骑的马的意思，但因为经常被用在驮马身上，比矮马低的马等个体较差的马身上，所以才转变为现在的“没用的马”的意思吧。</p>
     <p>但是如果说在进入迷宫时适合马的话，应该不太适合马吧。</p>
     <p>在封闭的空间里，马的力量无法完全发挥出来，说不定还有狭窄无法通过的地方。</p>
-    <p>之后驴子，牛，鹿，骆驼，ryama等作为驮兽有名吗？总之，最好是脚结实，能够承受负荷的长距离移动的动物。</p>
-    <p>但是要说哪个都适合迷宫的话微妙。</p>
+    <p>之后驴子，牛，鹿，骆驼，大羊驼等作为驮兽有名吗？总之，最好是脚结实，能够承受负荷的长距离移动的动物。</p>
+    <p>但是要说哪个适合迷宫的话每个都很微妙的感觉。</p>
     <br>
-    <p>“店主，有没有适合搬运货物的魔物？</p>
-    <p>如果可能的话，在像迷宫一样的封闭空间里也能不感到压力地进行活动就好了”</p>
+    <p>“ <span class="character">店主，有没有适合搬运货物的魔物？</span></p>
+    <p> <span class="character">如果可能的话，在像迷宫一样的封闭空间里也能不感到压力地进行活动就好了”</span></p>
     <br>
     <p>梅赛德斯看着关在笼子里的魔物，向店主询问。</p>
     <p>于是店主心领神会，马上给我们出示了一个笼子。</p>
     <br>
-    <p>“这样的话，我推荐‘克拉伊利亚’。</p>
-    <p>这是迷宫内最适合搬运货物的魔物”</p>
+    <p>“ <span class="character">这样的话，我推荐‘克拉伊利亚’。</span></p>
+    <p> <span class="character">这是迷宫内最适合搬运货物的魔物”</span></p>
     <br>
     <p>果然，这种时候的回答最快的应该是专业人士吧。</p>
     <p>到现在为止，肯定也有很多客人和梅赛德斯一样来这家店。</p>
-    <p>对了，行李搬运也是重要的作用之一。</p>
-    <p>如果是幻想系的轻小说，大体上主人公有能无限装入条款的袋子等被无视的作用,不过，本来这样的东西不在很大程度上变化。</p>
-    <p>被店主引导的牢笼中的是和梅赛德斯身高一样高的奇妙魔物。</p>
+    <p>说来也是，行李搬运也是重要的作用之一。</p>
+    <p>如果是幻想系的轻小说，大多的主角会有个四次元口袋能装入无限的东西，不过，本来就没有这种东西的就大不一样了。</p>
+    <p>被店主引导的所见到的牢笼中的是和梅赛德斯身高一样高的奇妙魔物。</p>
     <p>整体的形状像犀牛吗？岩石般的皮肤和结实的四条腿引人注目。</p>
     <p>嘴像鸟嘴一样尖，鼻尖有一根，头部有两根角。</p>
     <p>脖子上有保护要害的围巾，外表看起来就像是把前世图鉴中看到的三角龙缩小了一样。</p>
     <p>眼睛很平静，在笼子里咯吱咯吱地嚼着草。</p>
     <br>
-    <p>“这家伙是克拉伊利亚。</p>
-    <p>性情温和，容易养熟，说的事也会听。</p>
-    <p>持久力出色，使之拿重的行李也不颤动。</p>
-    <p>另外，平时虽然很老实，但认真奔跑时的速度却轻易地超过了马”</p>
-    <p>“好啊。买这个吧，多少钱？”</p>
-    <p>“变成三十万Elka”</p>
+    <p>“<span class="character">这家伙就是克拉伊利亚。</span></p>
+    <p><span class="character">性情温和，易于驯服，说的事也会听。</span></p>
+    <p><span class="character">持久力出色，使之拿重的行李也不颤动。</span></p>
+    <p><span class="character">另外，平时虽然很老实，但认真奔跑时的速度却轻易地超过了马”</span></p>
+    <p>“<span class="character">好啊。买这个吧，多少钱？”</span></p>
+    <p>“<span class="character">三十万Elka”</span></p>
     <br>
-    <p>作为随身行李的小型触发器……原来，立即购买了攀岩。这样行李就保管好了。</p>
-    <p>在这里，梅赛德斯没有马上潜入迷宫，当天就回去一次，花了数天时间对克莱利亚进行教育。</p>
-    <p>在训练的同时，通过多次进行让哈尔巴德熟识的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
-    <p>就这样，做好了充分的准备，梅赛德斯终于朝着迷宫最下层的目标突入了修塔克迷宫。</p>
+    <p>作为随身行李的小型三角龙……立即购买了克拉伊利亚。这样行李就保管好了。</p>
+    <p>梅赛德斯没有马上潜入迷宫，当天就回去了，花了数天时间对克拉伊利亚进行教育。</p>
+    <p>在训练的同时，通过多次熟悉使用哈尔巴德的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
+    <p>就这样，做好了充分的准备，梅赛德斯终于朝着迷宫最下层的目标突入了斯塔克迷宫。</p>
     <p class="divline"></p>
     <p>这次的目的既不是地图，也不是捕获魔物，也不是收集素材。</p>
     <p>目标只有最下层一个。因此，不用多余的战斗和绕道，一直走最短的路线。</p>
     <p>如果看到现在为止由于潜水好多次制作了的地图清楚地明白应该通过哪里。至今为止的行动都不是徒劳的。</p>
-    <p>消耗最小限度，战斗也最小限度。</p>
-    <p>只有必须打倒的对手，梅赛德斯他们以惊人的速度冲破迷宫。</p>
+    <p>最小限度地消耗，战斗也最小限度。</p>
+    <p>只把必须打倒的对手打倒，梅赛德斯他们以惊人的速度冲破迷宫。</p>
     <br>
-    <p>“噗噜噗噜，是我不好的果冻。”</p>
-    <p>“又是你啊。这次来攻略迷宫了。也许再也不会见面了”</p>
-    <p>“噗噜噗噜，加油啊！”</p>
-    <p>“谢谢”</p>
+    <p>“<span class="character">噗噜噗噜，我是坏果冻哦。”</span></p>
+    <p>“<span class="character">又是你啊。这次来攻略迷宫了。也许再也不会见面了”</span></p>
+    <p>“<span class="character">噗噜噗噜，加油啊！”</span></p>
+    <p>“<span class="character">谢谢”</span></p>
     <br>
     <p>这个果冻在必须通过的位置，所以即使不愿意也要见面。</p>
-    <p>梅赛德斯用哈尔巴德斩杀他的核心，向前迈进。</p>
+    <p>梅赛德斯用哈尔巴德斩杀它的核心，向前迈进。</p>
     <p>向下、向下、一味向下。</p>
     <p>虽然不知道是什么样的结构，但越往里走，阶层的宽度就会发生变化，变得像迷宫一样。</p>
-    <p>原来如此，原来是トライヌ把食物吃光了。一直以最短路线前进的梅赛德斯，也不能一日攻略。</p>
+    <p>原来如此，难怪トライヌ会把食物吃光。一直以最短路线前进的梅赛德斯，也不能一日攻略。</p>
     <p>本凯知道路，所以即使没有地图的地方也能很容易地发现通往下一个阶层的楼梯，真是值得庆幸的事。</p>
-    <p>但即便如此，难易度还是越往里走，迷宫也越复杂。</p>
+    <p>但即便如此，随着越往深处前进难易度越高，迷宫也越复杂。</p>
     <p>梅赛德斯通过事先预先预习、地图绘制、本凯等伙伴，进展顺利，否则攻略将极为困难。</p>
     <p>初次见面就突然能攻略这个的家伙可以断言是怪物。</p>
     <p>但是，梅赛德斯的步伐也是从seeker的常识来看，是十分出类拔萃的速度。</p>
     <p>潜入迷宫五日。仅仅如此而已，一行人就已经到达了最底层。</p>
     <br>
-    <p>「主。下一个二十五层是最下层。</p>
-    <p>在那之前应该休息一下吗？”</p>
-    <p>“知道了。那么今天在这里休息，明天称霸最下层”</p>
+    <p>「<span class="character">主。下一个二十五层是最下层。</span></p>
+    <p><span class="character">在那之前应该休息一下吗？”</span></p>
+    <p>“<span class="character">知道了。那么今天在这里休息，明天称霸最下层”</span></p>
     <br>
     <p>不使用任何物品，食物也还有足够的富余。</p>
     <p>这样的话，再往返三次也没问题吧。</p>
-    <p>梅赛德斯把罐头打开，用叉子吃里面的魔鬼肉。</p>
+    <p>梅赛德斯把罐头打开，用叉子吃里面的魔物肉。</p>
     <p>然后吃了一块板状巧克力，决定那天睡觉。</p>
     <p>看守是交替制，一个人睡四个小时。</p>
     <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为本凯之前的阿修拉奥加对峙着。</p>
     <br>
-    <p>“你来了，求宝者。但是在这之前只要有我在就不可能前进”</p>
-    <p>“原来如此，真的有个你啊，本凯”</p>
-    <p>“主”</p>
-    <p>“我知道。交给你了”</p>
+    <p>“<span class="character">你来了，求宝者。但是在这之前只要有我在就不可能前进</span>”</p>
+    <p>“<span class="character">原来如此，真的有个你啊，本凯</span>”</p>
+    <p>“<span class="character">主</span>”</p>
+    <p>“<span class="character">我知道。交给你了</span>”</p>
     <br>
     <p>本凯走到阿修拉奥加前面。</p>
     <p>虽然是相同的存在，但是二者却有着一目了然的差异。</p>
     <p>阿修拉奥加是梅赛德斯遇见时那样的外表，武器也只有六把剑。</p>
     <p>相对的，本凯用铠甲包裹全身，武器除了剑以外也装备着各种各样的东西。</p>
-    <p>与梅赛德斯的相遇改变了本凯之前的本凯。过去和现在。</p>
+    <p>遇上梅赛德斯而改变了的本凯与之前的本凯。过去和现在。</p>
     <p>这种差距显而易见，战斗始终被本凯压倒。</p>
     <p>二人展开互相挥舞武器的剑戟，武器的性能也不同。</p>
-    <p>阿修拉奥加不断地被击落武器，如果打开距离受到枪和十字弓的远距离攻击。</p>
-    <p>不久，本凯一次也没有表现出危险的场面，将过去的自己的头砍飞了。</p>
+    <p>阿修拉奥加不断地被击落武器，如果拉开距离则受到枪和十字弓的远距离攻击。</p>
+    <p>不久，本凯一次也没有表现出有危险的场面，将过去的自己的头砍飞了。</p>
     <br>
-    <p>“很漂亮。我看到了你的成长”</p>
-    <p>“这也是因为和主人相遇的缘故。”</p>
+    <p>“<span class="character">很漂亮。我看到了你的成长</span>”</p>
+    <p>“<span class="character">这也是因为和主人相遇的缘故。</span>”</p>
     <br>
     <p>武器有差别。但是比这更大的差距就是能力的差距。</p>
-    <p>是的，单纯的本凯比阿修拉奥加要强。</p>
+    <p>没错，单纯的因为本凯比阿修拉奥加要强。</p>
     <p>梅赛德斯确信。可以。我们很强。</p>
     <p>谦虚是美德，骄傲是恶德。</p>
     <p>但是没有自信的人为什么能取得胜利呢？</p>
@@ -116,10 +116,10 @@
     <p>抬头仰望，大小只有10米左右的门。前方有什么。</p>
     <p>有啥子不试着去不明白，只有困难的事确实吧。</p>
     <br>
-    <p>「那么，走吧。不管前面发生什么事，我都不想回去了。</p>
-    <p>跟到地狱底下吧」</p>
-    <p>“遵命”</p>
-    <p>“汪！”</p>
+    <p>「 <span class="character">那么，走吧。不管前面发生什么事，我都不想回去了。</span></p>
+    <p> <span class="character">追随我到地狱的尽头吧」</span></p>
+    <p>“ <span class="character">遵命”</span></p>
+    <p>“ <span class="character">汪！”</span></p>
     <br>
     <p>一把手搭在门上，门就轻易地打开了。</p>
     <p>里面有一条用黄金涂饰的绚烂的一条道路。正如本凯所说的那样，前面还有一扇门，梅赛德斯毫不畏惧地打开了。</p>
@@ -127,49 +127,49 @@
     <p>右边的门是黄金。左边的门是漆黑。</p>
     <p>那简直就像是表示着前方的分歧点，梅赛德斯也不知不觉地紧张地鸣响着喉咙。</p>
     <br>
-    <p>“终于到这里来了啊。探索者哟」</p>
+    <p>“ <span class="character">终于到这里来了啊。探索者哟</span>」</p>
     <br>
     <p>声音在广场中回响。</p>
-    <p>令人意外的是那个是女人的声音。说不定是少年的声音,不过，梅赛德斯用第一印象暂且，想这个声音的主人是女人。</p>
+    <p>令人意外的是那个是女人的声音。说不定是少年的声音,不过，梅赛德斯暂且第一印象觉得这个声音的主人是女性。</p>
     <br>
-    <p>“在你面前有两扇门。打开的只有一次。</p>
-    <p>如果要追求名誉和宝物的话，请打开黄金之门。那里有光荣的约定。</p>
-    <p>没有困难。你完成了。</p>
-    <p>把那里的宝物尽情地带回去，度过充满荣誉和光荣的一生就好了吧。</p>
-    <p>也准备了通向地面的没有魔物的通道。</p>
-    <p>但是，选择这扇门的人再也无法打开黑色的门。黑之门不再出现在他面前。</p>
-    <p>将黑之门的存在从记忆中抹去，你将永远无法进入通往真实的道路。</p>
-    <p>这不仅仅是这个迷宫的故事，进入任何迷宫都是一样的事情。通往真实的门扉只有一次”</p>
+    <p>“<span class="character">在你面前有两扇门。打开的机会只有一次。</span></p>
+    <p><span class="character">如果要追求名誉和宝物的话，请打开黄金之门。那里有光荣的约定。</span></p>
+    <p><span class="character">毫无困难。你完成了。</span></p>
+    <p><span class="character">把那里的宝物尽情地带回去，度过充满荣誉和光荣的一生就好了吧。</span></p>
+    <p><span class="character">也准备了通向地面的没有魔物的通道。</span></p>
+    <p><span class="character">但是，选择这扇门的人再也无法打开黑色的门。黑之门不再出现在你的面前。</span></p>
+    <p><span class="character">将黑之门的存在从记忆中抹去，你将永远无法进入通往真实的道路。</span></p>
+    <p><span class="character">不仅仅是这个迷宫会这样，进入任何迷宫都是一样。通往真实的门扉只有一次”</span></p>
     <br>
-    <p>“要寻求真实的话，请打开黑之门。那里有困难和考验。</p>
-    <p>赌上性命，如果能战胜考验，你就能接触到世界的真实的一面。</p>
-    <p>但是这个考验没有出息。如果输了，你就会丧命，失去一切。</p>
-    <p>来挑选吧。得到真实还是失去一切？还是要得到荣耀？</p>
-    <p>只能选择一次。从这里返回的话，两扇门都不会再打开”</p>
+    <p>“<span class="character">要寻求真实的话，请打开黑之门。那里有困难和考验。</span></p>
+    <p><span class="character">赌上性命，如果能战胜考验，你就能接触到世界的真实的一面。</span></p>
+    <p><span class="character">但是这个考验可没有同情心。如果输了，你就会丧命，失去一切。</span></p>
+    <p><span class="character">来挑选吧。得到真实还是失去一切？还是要得到荣耀？</span></p>
+    <p><span class="character">只能选择一次。从这里返回的话，两扇门都不会再打开”</span></p>
     <br>
     <p>梅赛德斯听完声音，然后想。</p>
     <p>真是坏心眼的两种选择。</p>
     <p>一般来说，连烦恼的必要都没有……黄金之门只有一扇。</p>
-    <p>那倒是。大部分的人来这里之前体力也用尽了吧，条款和食物也几乎没残留吧。</p>
+    <p>那倒是。大部分的人来这里之前体力也用尽了吧，道具和食物也几乎没残留吧。</p>
     <p>即使在那种状态下还要与困难作斗争，谁都不愿意。</p>
     <p>不，除此之外没有别的道路的话，说不定会下决心去挑战。</p>
     <p>但是这里还有一个简单的终点。</p>
     <p>选择黄金之门的话，可以毫无风险地得到宝物。</p>
-    <p>原本，应该说是潜入迷宫的人的目的等从最初开始在里头睡的宝山。</p>
-    <p>那么和初志是一致的，没有理由选择可能特意死的黑色之门。</p>
+    <p>原本，应该说是潜入迷宫的人的目的从最初开始就是在里头沉睡的宝山。</p>
+    <p>那么和初志是一致的，没有理由去特地选择一个可能死掉的黑色之门。</p>
     <p>过去从迷宫把宝物带回来的少数成功者们，恐怕是在这里选择黄金之门的人们。</p>
-    <p>然后一定……被选择了黄金之门的迷宫之后复活。</p>
+    <p>然后可以肯定……被选择了黄金之门的迷宫在之后又复活了。</p>
     <p>所以迷宫至今仍有七成没有被攻占，留在了世界，或者说现在又在什么地方出现了。</p>
     <p>相反，被完全攻略，复活的事也没有了的三成……选择了黑色的门，战胜了困难？</p>
     <p>这样想的话，有一定程度的说明。</p>
     <br>
-    <p>“……本凯，小黑。做好觉悟了吗”</p>
-    <p>“是”</p>
-    <p>“汪呜！”</p>
+    <p>“<span class="character">……本凯，小黑。做好觉悟了吗</span>”</p>
+    <p>“<span class="character">是</span>”</p>
+    <p>“<span class="character">汪呜！</span>”</p>
     <br>
     <p>梅赛德斯向后面的一人一狗地确认了一下，然后向前看。</p>
     <br>
-    <p>“——请打开黑色的门。挑战一下考验什么的吧”</p>
+    <p>“<span class="character">—请打开黑色的门。挑战一下考验什么的吧</span>”</p>
     <p class="divline"></p>
     <p>クライリア（饶了我吧……）</p>
 
