欠月的梅赛德斯 十六章部分翻译

--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -12,173 +12,186 @@
 
 <body>
     <h1>16. 考验</h1>
-    <p>应梅赛德斯的呼声，黑色的门被打开了。</p>
-    <p>其中广阔、广阔——无论到哪里都是广阔的空间。</p>
+    <p>黑门回应了梅赛德斯的回应打开了。</p>
+    <p>广阔的内部——无论到哪里都是广阔的空间。</p>
     <p>虽然不知道到底是怎么在迷宫中形成这样的空间的，但梅赛德斯为了不把动摇表现出来，努力地走进了大门。</p>
     <p>本凯和小黑也跟在后面，只有随身携带行李的克拉伊利亚留在门外。</p>
     <p>于是门慢慢地关上了，梅赛德斯、本凯、小黑被关在里面。</p>
     <br>
     <p>这样不突破考验，就无法生存下去。</p>
-    <p>“挑战真实的人啊，好想来了。”</p>
+    <p>“ <span class="character">挑战真实的人啊，欢迎到来。</span>”</p>
     <p>从空间深处传来声音。</p>
     <p>和刚才不同，是低沉的男人的声音。</p>
     <p>这个声音的主人似乎是个考验。</p>
-    <p>“到这里来的人不需要多余的话……要寻求真实，就要显示力量”</p>
-    <p>“很容易理解啊。关键是要打倒你吗？”</p>
-    <p>“你说得对……但是，如果可以的话”</p>
+    <p>“<span class="character">到这里来的人不需要多余的话……要寻求真实，就要显示力量</span>”</p>
+    <p>“<span class="character">很容易理解啊。关键是要打倒你吗？</span>”</p>
+    <p>“<span class="character">你说得对……但是，如果可以的话</span>”</p>
     <p>在拿着武器的梅赛德斯面前，声音的主人出现了。</p>
     <p>那是像挽着胳膊的没有脸的人一样的什么。</p>
     <p>但是，那个尺寸要全长超过20m吧。怎么看都不是人。</p>
     <p>背上是三六对翅膀。左侧是白色闪耀的天使的翅膀，右侧长着暗中浑浊的恶魔的翅膀。</p>
     <p>而且背负着闪耀的光环，黑色的火焰在全身盘旋。</p>
-    <p>（……怎么说呢，一个迷宫的最下层出现了RPG的LASBOSS……）</p>
-    <p>「我是永久的光，永恒的黑暗……寻求真实之人啊，赐予你死之安宁吧」</p>
-    <p>（一个只不过是迷宫BOSS的家伙，在赌上世界命运的战斗中说出了像Lasboss一样的台词……）</p>
-    <p>“我的名字叫舒瓦卢兹·历史……被抹杀的历史。谁都会背过视线，与年轻时的痛苦一起封印的负面记忆”</p>
+    <p>（……怎么说呢，一个迷宫的最下层出现了RPG的LASTBOSS……）</p>
+    <p>「 <span class="character">我是永久的光，永恒的黑暗……寻求真实之人啊，赐予你死之安宁吧</span>」</p>
+    <p>（一个只不过是迷宫BOSS的家伙，在赌上世界命运的战斗中说出了像LastBoss一样的台词……）</p>
+    <p>“ <span class="character">我的名字叫舒瓦卢兹·历史之眼……被抹杀的历史。谁都会背过视线，与年轻时的痛苦一起封印的负面记忆</span>”</p>
+    <p><span class="comment translator">シュバルツ (Schwarz)德语，意思是"黑色" </span></p>
+    <p><span class="comment translator">ヒストリエ 《历史之眼》由日本漫画家岩明均所绘的日本漫画作品，漫画于日本讲谈社的杂志《月刊Afternoon》连载，单行本自2006年1月至今发行11集，中文版由台湾东立出版社代理。 维基百科</span></p>
     <p>（不，你只是迷宫的BOSS吧……）</p>
     <p>看到考验的梅赛德斯的感想是什么，有“啊，嗯”的感觉。</p>
     <p>不，看到强者就明白了。要打倒一定很困难吧。</p>
     <p>但是怎么说呢，除此之外就没有了吗？</p>
     <p>不知为什么，这敌人的身影在前世的年轻时候莫名地熏得有些讨厌。</p>
     <p>具体地想起十四岁左右就讨厌了。</p>
-    <p>“但是人不能逃避过去……不管封印得多么严肃，犯下的过去都不会改变。</p>
-    <p>想擦也擦不掉的错误。想忘也忘不了的罪……我存在于任何人的心中。</p>
-    <p>但是我们还是要把这份痛苦解放出来吧……来，忘记一切睡觉吧！”</p>
+    <p>“ <span class="character"> 但是人不能逃避过去……不管封印得多么深，犯下的过去都不会改变。</span></p>
+    <p><span class="character">想擦也擦不掉的错误。想忘也忘不了的罪……我存在于任何人的心中。</span></p>
+    <p><span class="character">但是我会把这一切都解放的……来吧，忘记一切地入眠吧！”</span></p>
     <p>舒瓦兹·希特里解开手臂，张开双臂。</p>
     <p>来啊！那样判断，梅赛德斯们准备。</p>
     <p>与此同时，他首先放出了宣告这个考验开始的第一击。</p>
-    <p>“序章——无法平息的手臂·发条机”</p>
-    <p>历史学家宣布技名的话，他的手臂象拘束具一样地缠上的绷带解开。</p>
+    <p>“<span class="character">序章——<ruby><rb>无法平息的手臂</rb><rt>Arm·Bondage</rt></ruby>”</span></p>
+    <p><span class="comment translator">鎮まらぬ腕(アルム・バンダージェ)</span></p>
+    <p>历史之眼宣布技名的话，他的手臂象拘束具一样地缠上的绷带解开。</p>
     <p>从那里放出的是黑色的火焰。</p>
-    <p>梅赛德斯轻易地避开向全方位放出的火焰，跳跃向历史舞台前跳跃。</p>
-    <p>然后哈尔巴德一闪。承载了重力的超重量的一击向历史主义者袭击,不过，历史主义者用翼防御了那个。</p>
-    <p>“第二章——不存在的黑暗人格背包扎伊特·泽尔普斯特”</p>
-    <p>在沐浴在从历史学放射出的光芒的瞬间，梅赛德斯陷入了简直不是现在的自己的错觉。</p>
+    <p>梅赛德斯轻易地避开向全方位放出的火焰，跳跃向历史之眼前跳跃。</p>
+    <p>然后哈尔巴德一闪。承载了重力的超重量的一击向历史之眼袭击,不过，历史之眼用翼防御了那个。</p>
+    <p>“<span class="character">第二章——<ruby><rb>不存在的黑暗人格</rb><rt>Rückseite·selbst</rt></ruby>”</span></p>
+    <p><span class="comment translator">リュックザイテ 德语(Rückseite) 日语里是裏，中文是背面；反面的意思</span></p>
+    <p><span class="comment translator">ゼルプスト 元型(げんけい、德语: Archetyp或者Archetypus、英語: archetype、アーキタイプ)。瑞士心理学家卡尔·荣格（Carl Gustav Jung ，1875—1961）所提出的名词。</span></p>
+    <p><span class="comment translator">ゼルプスト是其中四点中的一种,意思为"阴影"（或阴暗自我）:人格的最内层，具有兽性的低级的种族遗传，类似于弗洛伊德所说的“本我”。</span></p>
+    <p>在沐浴在从历史之眼放射出的光芒的瞬间，梅赛德斯陷入了简直不是现在的自己的错觉。</p>
     <p>就好像自己心中还有另一个自己一样……不，冷静点。没有那种东西。</p>
-    <p>这只是一种精神攻击。别让我迷惑了。</p>
-    <p>虽然摇头解除精神干涉，但就在那个间隙，历史的拳头抓住了梅赛德斯。</p>
-    <p>瞬间防御了,不过，艳丽地被飞向地面使之追尾。</p>
-    <p>然而，为了替换它，本凯和小黑从左右跳了过来。</p>
-    <p>“三章——哀伤周围的目光·aoge”</p>
+    <p>这只是一种精神攻击。别被迷惑了。</p>
+    <p>虽然摇头解除精神干涉，但就在那个间隙，历史之眼的拳头抓住了梅赛德斯。</p>
+    <p>瞬间防御了,不过还是被华丽地吹飞撞到了地上。</p>
+    <p>不过本凯和小黑作为换手从左右扑上去。</p>
+    <p>“<span class="character">三章——<ruby><rb>周围可怜的目光</rb><rt>Mitleid·Auge</rt></ruby>”</span></p>
+    <p><span class="comment translator">ミットライト 德语(Mitleid) 同情。憐れみ（あわれみ）</span></p>
+    <p><span class="comment translator">アオゲ 德语(Auge) 眼睛</span></p>
     <p>随着宣言，整个空间都出现了眼睛。</p>
     <p>他们好像在悲哀，或者蔑视着梅赛德斯。</p>
     <p>被全方位监视，是不利的。所有的动作都变得一目了然。</p>
     <p>死角不再是死角，奇袭作为奇袭无法成立。</p>
     <p>小黑和本凯的攻击也容易被抛弃，用翅膀被弹开了。</p>
     <p>但是在那里重新站立了姿势的梅赛德斯跳入，任凭力量挥下哈尔巴德。</p>
-    <p>“重力十倍！”</p>
+    <p>“<span class="character">重力十倍！”</span></p>
     <p>配合击落的重力魔法增加重量。</p>
-    <p>以浑身的一击切断了一个历史的翅膀。</p>
-    <p>……相通！</p>
+    <p>以浑身的一击切断了一个历史之眼的翅膀。</p>
+    <p>……行得通！</p>
     <p>虽然是很厉害的敌人，但这边的攻击并不见效。</p>
     <p>看到这一点，本凯和小黑也士气高涨，与梅赛德斯联合进行攻击。</p>
-    <p>本凯巧妙地操纵着六个武器，专心致志地打败历史舞台的姿势，小黑四处飞来飞去捣乱。</p>
+    <p>本凯巧妙地操纵着六个武器，专心致志地打败历史之眼的姿势，小黑四处飞来飞去捣乱。</p>
     <p>而且，以小黑为立足点，梅赛德斯跳了起来，全身心地投入一击。</p>
-    <p>但是他觉得那个很麻烦吧。历史学家转向了下一个攻击。</p>
-    <p>“四章——装作孤独的孤立斗篷”</p>
+    <p>但是他觉得那个很麻烦吧。历史之眼转向了下一个攻击。</p>
+    <p>“<span class="character">四章——<ruby><rb>假装孤独的孤立</rb><rt>Einsamkeit</rt></ruby>”</span></p>
+    <p><span class="comment translator">アインザームカイト 德语(Einsamkeit) 寂寞、孤独。寂しさ（さびしさ）</span></p>
     <p>瞬间，梅赛德斯的周围被黑暗包围。</p>
     <p>哪里都看不到本凯的身影，小黑的身影。</p>
-    <p>不好吃，被孤立了……！</p>
+    <p>糟糕，被孤立了……！</p>
     <p>黑色的火焰袭击着焦急万分的梅赛德斯。</p>
-    <p>「呼，啊！」</p>
+    <p>「<span class="character">库，啊！」</span></p>
     <p>全身被火焰一边燃烧一边也快速地再生，着陆地面。</p>
-    <p>因为刚才的一击球场上点着了火，所以迅速的脱掉，从怀里取出魔石。</p>
+    <p>因为刚才的一击大衣上着了火，所以迅速的脱掉，从怀里取出魔石。</p>
     <p>冷静下来看清楚就行了。并不是真的被孤立了……只是看不见同伴的身影。</p>
-    <p>然后，周围的目光告诉我们。</p>
-    <p>你看，现在也是。有些眼神看着自己以外的某个地方。</p>
+    <p>然后，从周围的目光也能知道。</p>
+    <p>没错，现在也是。有些眼神看着自己以外的某个地方。</p>
     <p>也就是说，那里有本凯和小黑。</p>
     <p>梅赛德斯扔下火焰的魔石华丽地爆炸，用闪光驱散黑暗一瞬间。</p>
-    <p>更加跳跃之后挥舞哈尔巴德，用魔法放出风的刃一个接一个地毁坏周围的眼。</p>
+    <p>紧接着跳跃挥舞哈尔巴德，用魔法放出风刃一个接一个地毁坏周围的眼。</p>
     <p>砍伐，破坏。砍伐，破坏。</p>
     <p>刀闪闪发光，眼前（景象）崩溃的同时黑暗消失了。</p>
-    <p>「本凯、小黑！没事吗！」</p>
-    <p>「是！多少也没问题！」</p>
-    <p>「汪！」</p>
-    <p>确认同伴平安后，梅赛德斯就这样将风之刃向历史遗迹投掷。</p>
-    <p>不放过蹒跚的间隙，用重力魔法飞行，这次直接攻击哈佛。</p>
-    <p>瞬间直方图也用翅膀防御，不过，连同那个翼切断。</p>
-    <p>在历史的身体上刻上了伤痕。</p>
-    <p>「第五章：强烈的后悔 弗蒂希·灰度」</p>
-    <p>「五章――激しい後悔ヘフティヒ・グリュック」</p>
-    <p>下一个招数又是火焰。历史从脸上放出火焰，向梅赛德斯他们进行攻击。</p>
+    <p>「<span class="character">本凯、小黑！没事吗！」</span></p>
+    <p>「<span class="character">是！多少也没问题！」</span></p>
+    <p>「<span class="character">汪！」</span></p>
+    <p>确认同伴平安后，梅赛德斯就这样将风之刃向历史之眼投掷。</p>
+    <p>不放过蹒跚的间隙，用重力魔法飞行，这次直接使用哈尔巴德敲击。</p>
+    <p>历史之眼在这瞬间用翅膀防御，不过，连同那个翼切断。</p>
+    <p>在历史之眼的身体上刻上了伤痕。</p>
+    <p>「<span class="character">第五章——<ruby><rb>强烈的后悔</rb><rt>heftig·Glück</rt></ruby> </span>」</p>
+    <p><span class="comment translator">「五章――激しい後悔ヘフティヒ・グリュック」</span></p>
+    <p><span class="comment translator">ヘフティヒ 德语(heftig)。强烈的。激しい（はげしい）</span></p>
+    <p><span class="comment translator">グリュック 德语(Glück)。运气</span></p>
+    <p>下一个招数又是火焰。历史之眼从脸上放出火焰，向梅赛德斯他们进行攻击。</p>
     <p>但是那并不是之前的黑色火焰，而是像喷出的岩浆一样的红莲之炎。</p>
     <p>就像不断溢出的感情一样，火焰填满了空间，就像是后悔过去而辗转反侧的火焰在肆虐。</p>
     <p>梅赛德斯将水和冰的魔石全部扔到这里进行防御，但是无法防御。</p>
     <p>但是这样就可以了。因为她的目的不是防御什么的。</p>
-    <p>「卧倒！」</p>
+    <p>「<span class="character">卧倒！」</span></p>
     <p>在梅赛德斯指示的同时，本凯和小黑尽可能地拉开距离伏下。</p>
     <p>梅赛德斯也同样拉开距离，用魔石展开风之防壁。</p>
-    <p>紧接着，由于高温的火焰而急剧气化的水发生了大爆炸，袭击了历史记录自身。</p>
+    <p>紧接着，由于高温的火焰而急剧气化的水发生了大爆炸，袭击了历史之眼自身。</p>
     <p>就是所谓的水蒸气爆炸。</p>
-    <p>根据规模的不同，山体崩溃也会引起的这种爆炸的确起到了作用。</p>
+    <p>根据规模的不同，这种连山体崩溃都能引起的爆炸的确起到了作用。</p>
     <p>看不见翅膀。</p>
     <p>小黑没有从那里逃走，梅赛德斯乘坐在上面。</p>
-    <p>历史也发出迎击的火焰，不过，由于小黑机敏地避开那个的事梅赛德斯只能集中在攻击上。</p>
-    <p>「哈！」</p>
+    <p>历史之眼也发出迎击的火焰，不过，由于小黑机敏地避开那些，梅赛德斯变能够集中于攻击上。</p>
+    <p>「<span class="character">哈！」</span></p>
     <p>哈尔巴德一閃。</p>
-    <p>斩断历史的侧腹，比接受反击更快地小黑脱离。</p>
+    <p>斩断历史之眼的侧腹，小黑比接受反击更快地脱离。</p>
     <p>交替进攻的是本凯。</p>
-    <p>他放着交叉弓一边牵制一边缩短距离，用多个武器同时攻击刺进了历史的翅膀。</p>
-    <p>「畳み掛けるぞ！」</p>
-    <p>梅赛德斯跳过指示从小黑跳跃。</p>
-    <p>轻轻松松地挥舞着哈尔巴德，将斩击的风暴吹向了历史。</p>
-    <p>本凯和小黑也配合着进行连续攻击，直方图用翅膀和手臂正确防御，反击。</p>
+    <p>他放着交叉弓一边牵制一边缩短距离，用多个武器同时攻击刺进了历史之眼的翅膀。</p>
+    <p>「<span class="character">畳み掛けるぞ！」</span></p>
+    <p>梅赛德斯从跳跃的小黑身上跃起。</p>
+    <p>轻轻松松地挥舞着哈尔巴德，将斩击的风暴吹向了历史之眼。</p>
+    <p>本凯和小黑也配合着进行连续攻击，历史之眼用翅膀和手臂正确防御，反击。</p>
     <p>三比一尚且势均力敌。果然只有一半的考验是不够的。</p>
-    <p>「第六章——过去不会改变 ウンフェアエンダーリヒ・アインスト」</p>
-    <p>「六章――過去は変わらないウンフェアエンダーリヒ・アインスト」</p>
+    <p>「<span class="character">第六章——<ruby><rb>过去不会改变</rb><rt>unverändlich·einst</rt></ruby> </span>」</p>
+    <p><span class="comment translator">「六章――過去は変わらないウンフェアエンダーリヒ・アインスト」</span></p>
+    <p><span class="comment translator">ウンフェアエンダーリヒ 德语(unverändlich)。不可抗拒的</span></p>
+    <p><span class="comment translator">アインスト 德语(einst)。过去。昔・かつて（むかし・かつて）</span></p>
     <p>在收到那个宣言的瞬间，梅赛德斯的身体突然被火焰包围了。</p>
     <p>不，不仅仅是梅赛德斯。</p>
     <p>突然被风吹到地上。</p>
-    <p>两个人和一只狗马上站起来，但是再次听到历史树宣言技能名的时候受到了完全相同的伤害。</p>
+    <p>两人一狗马上站起来，但是再次听到历史之眼宣言技能名的时候受到了完全相同的伤害。</p>
     <p>（这是……过去的伤害再现了吗！？真麻烦！）</p>
-    <p>梅赛德斯一边被火焰烧焦，一边强行跳跃，用哈尔巴德的钩爪撕裂了历史里叶的脸。</p>
-    <p>过去受到的伤害当场再现，既没有回避也没有防御。发动前除了击溃以外的手都找不到。</p>
+    <p>梅赛德斯一边被火焰烧焦，一边强行跳跃，用哈尔巴德的钩爪撕裂了历史之眼的脸。</p>
+    <p>过去受到的伤害当场再现，既无法回避也无法防御。除了在发动前击溃以外。</p>
     <p>但是，他太着急了，想让他停下来。伸出的手想要抓住梅赛德斯。</p>
     <p>我想避开这个也来不及了。被抓住了胸口，行动被封印了。</p>
-    <p>在那里历史树打算从刚才的脸放出火焰。</p>
+    <p>在那里历史之眼打算从刚才的脸放出火焰。</p>
     <p>如果直接攻击的话，即使是梅赛德斯也不会平安。</p>
-    <p>「嘁！」</p>
+    <p>「<span class="character">嘁！」</span></p>
     <p>但是被抓住的只有衣服是不幸中的万幸。</p>
     <p>梅赛德斯自己撕破衣服，强行从拘束中逃脱，回避了火焰。</p>
     <p>因为采取了无端的避开方法，上半身变成了内衣内衣下装，不过，没有在意的余地，也没有因为那样的事一个个感到羞耻说「呀」的那样少女气。</p>
     <p>发卡也解开了，头发有点阴郁，但是这边也没有时间在意吧。</p>
-    <p>「重力……五十倍！」</p>
-    <p>强制提高魔力的输出，将历史记录倒在了地上。</p>
+    <p>「<span class="character">重力……五十倍！」</span></p>
+    <p>强制提高魔力的输出，将历史之眼倒在了地上。</p>
     <p>但是，这就是我的极限。完全只是魔法，自己也动不了。</p>
     <p>但是，即使梅赛德斯不能行动，也有可以行动的伙伴。</p>
-    <p>本凯将交叉弓向上发射，被重力吸引急速下降，刺入历史。</p>
+    <p>本凯将交叉弓向上发射，被重力吸引急速下降，刺入历史之眼。</p>
     <p>看了那个之后马上解除魔法，切换到下一个魔法。</p>
-    <p>「フェアザンメルン！」</p>
+    <p>「<span class="character">フェアザンメルン！」</span></p>
     <p>梅赛德斯的原创土属性魔法第三弹与其说是重力，不如说是引力。</p>
     <p>是一种在手被遮住的方向上产生引力场，将周围的物体拉入的魔法，但威力不大。</p>
     <p>但是这样也能稍微阻碍敌人的行动。</p>
     <p>梅赛德斯更是身体力行，不违抗引力而加速。用力把来势的踢进去了。</p>
-    <p>还没有结束。抓住历史的巨大躯体，配合重力的操作举起，向空中投掷。</p>
-    <p>随后跳跃……就这样追了过去，把哈佛摆在上面一口气甩了下去。</p>
-    <p>历史树的脸裂开一半左右，轰鸣声向地面撞击。</p>
-    <p>「終章――アインスト……」</p>
-    <p>「させるか！」</p>
-    <p>虽然想要进行最后的抵抗，但是比那个更快的梅赛德斯把哈尔巴德刺向了历史的脸。</p>
+    <p>还没有结束。抓住历史之眼的巨大躯体，配合重力的操作举起，向空中投掷。</p>
+    <p>随后跳跃……就这样追了过去，把哈尔巴德摆在上面一口气甩了下去。</p>
+    <p>历史之眼的脸裂开一半左右，轰鸣声向地面撞击。</p>
+    <p>「<span class="character">終章――アインスト……」</span></p>
+    <p>「<span class="character">させるか！」</span></p>
+    <p>虽然想要进行最后的抵抗，但是比那个更快的梅赛德斯把哈尔巴德刺向了历史之眼的脸。</p>
     <p>即使这样也还没有贯彻到底，但最后的一击就在这之后。</p>
-    <p>梅赛德斯迅速地从历史舞台上跳下来，将全部魔力集中到双臂上。</p>
+    <p>梅赛德斯迅速地从历史之眼上跳下来，将全部魔力集中到双臂上。</p>
     <p>（坚持住啊······我的身体）</p>
     <p>魔法绝对不是可以无风险使用的东西。</p>
     <p>使用方也存在相应的消耗。</p>
     <p>如果说太过枯竭，那就叫做死亡。</p>
     <p>但是梅赛德斯决定即使犯了危险也要在这里取得胜利。</p>
     <p>如果不那样做的话，就不能把这家伙打倒现在的自己。我是这么想的。</p>
-    <p>「重力百倍！」</p>
-    <p>以界限以上的输出发射重力波，再集中一点。集中到了哈佛。</p>
-    <p>于是哈尔巴德裂开了，自己崩溃的同时也刺向了历史。</p>
+    <p>「<span class="character">重力百倍！」</span></p>
+    <p>以界限以上的输出发射重力波，再集中一点。集中到了哈尔巴德。</p>
+    <p>于是哈尔巴德裂开了，自己崩溃的同时也刺向了历史之眼。</p>
     <p>然后——贯通。</p>
-    <p>在历史树的脸上打了个洞，就像完成了任务一样粉碎散落。</p>
-    <p>「……干得······漂亮。汝等才是、能获取真实之人……」</p>
-    <p>而且历史也因为现在的一击而崩塌了。</p>
+    <p>在历史之眼的脸上打了个洞，就像完成了任务一样粉碎散落。</p>
+    <p>「<span class="character">……干得······漂亮。汝等才是、能获取真实之人……」</span></p>
+    <p>而且历史之眼也因为现在的一击而崩塌了。</p>
     <p>说了对梅赛德斯他们的赞赏（虽然没有口……）他变成光的粒子消失了。</p>
     <p>看到这一幕后，梅赛德斯脱力，差点倒下。</p>
     <p>但是本凯突然接住了这个身体。</p>
-    <p>“主人，你没事吧？”</p>
-    <p>“……啊！但是果然还是有点累了”</p>
+    <p>“<span class="character">主人，你没事吧？”</span></p>
+    <p>“<span class="character">……啊！但是果然还是有点累了”</span></p>
     <p>这样考验就结束了。</p>
     <p>梅赛德斯怀着完成后的成就感，微微一笑。</p>
 </body>
