--- a/OEBPS/Text/c033.xhtml
+++ b/OEBPS/Text/c033.xhtml
@@ -151,8 +151,8 @@
     <p>如何使用那个呢，让我们在战斗中看看吧。</p>
     <p>“梅赛德斯·格鲁内瓦特。家是公爵,不过，因为是四子家名不继承。请正常对待。</p>
     <p>无论从哪方面来说，接近战斗比较擅长”</p>
-    <p>我简单地做了自我介绍，展示了哈佛型的万能钥匙。</p>
-    <p>只要不使用迷宫的功能，就只是哈佛。</p>
+    <p>我简单地做了自我介绍，展示了哈尔巴德型的万能钥匙。</p>
+    <p>只要不使用迷宫的功能，就只是哈尔巴德。</p>
     <p>因为外观和以前也使用的市贩的哈尔巴德完全同样认为这个是主人钥匙的吸血鬼不在吧。</p>
     <p>“汉纳汉堡包。不是贵族，是商人的女儿，请好好相处。</p>
     <p>战斗可以稍微使用魔法”</p>
