--- a/OEBPS/Text/c068.xhtml
+++ b/OEBPS/Text/c068.xhtml
@@ -75,7 +75,7 @@
     <p>（啊，我知道）</p>
     <p>杜威尔夫的建议极为完善，梅赛德斯也承认这是正确的意见。</p>
     <p>现状的最佳方法……那就是梅赛德斯使用迷宫的力量，用物量击溃了弗雷德里克。</p>
-    <p>不管怎样，可以试射舒瓦兹·“历史学家”。</p>
+    <p>不管怎样，可以试射舒瓦兹·“历史之眼”。</p>
     <p>可是做那个周围的眼睛碍事，作为迷宫所有者现在被知道不是可喜的事。</p>
     <p>当然吉克林德也是妨碍··。如果阻止他的话，她也许会默不作声，但是以她的诚实很可能会在某处不小心说走了嘴。</p>
     <p>所以最好的是，这个地方的学生、教师、吉克林德都被弗雷德里克逮捕了……默默地看着那个的是非人性的，简直就像只考虑效率的机器一样。</p>
