--- a/OEBPS/Text/c069.xhtml
+++ b/OEBPS/Text/c069.xhtml
@@ -43,9 +43,9 @@
     <p>不仅如此，黑炎也沿着手臂向主体逼近，弗雷德里克一下子将手臂切下。</p>
     <p>但是剪掉也就不会结束。</p>
     <p>本应失去的手臂以惊人的速度成长，开始再生。</p>
-    <p>但是比起这场战争的结束，历史主义者的第二击更快。</p>
+    <p>但是比起这场战争的结束，历史之眼的第二击更快。</p>
     <p>“二章——背包扎伊特·塞尔普斯特（不存在的黑暗的人格）”</p>
-    <p>从没有任何历史记录的脸上射出光芒。</p>
+    <p>从没有任何历史之眼的脸上射出光芒。</p>
     <p>沐浴在这种氛围中的弗雷德里克……下一个瞬间，我站在年轻时的教室里。</p>
     <p>在那里有年轻时候的自己，并且嘲笑了弗雷德里克。</p>
     <p>“喂喂，你那副丑八怪的样子。</p>
@@ -56,7 +56,7 @@
     <p>是嘲笑衰老的自己的弗雷德里克自己。</p>
     <p>是依靠年轻时候的自己，一点也不错地弗雷德里克本人的身姿。</p>
     <p>弗雷德里克无力地跪着，年轻的自己的嘲笑快要心碎了。</p>
-    <p>但是停不下来。悲哀的老人，历史学家进行了进一步的追击。</p>
+    <p>但是停不下来。悲哀的老人，历史之眼进行了进一步的追击。</p>
     <p>“三章——中提琴·青凤（悲哀周围的眼睛）”</p>
     <p>教室里的同学们换了服装，几个人长大成人了。</p>
     <p>而fredelic，在他们心中站立着，很悲哀。</p>
@@ -127,7 +127,7 @@
     <p>终章——冰淇淋反射（过去重复）</p>
     <p>好几次向坏掉的老人展示的‘过去’成为了‘现在’而被甩下了。</p>
     <p>*</p>
-    <p>史瓦尔茨·ヒストリエ所拥有的最大和最坏的能力。那就是“冰淇淋重复”。</p>
+    <p>史瓦尔茨·历史之眼所拥有的最大和最坏的能力。那就是“冰淇淋重复”。</p>
     <p>其效果是通过纳米机器进行完全催眠。</p>
     <p>根据前六章的攻击使精神减弱，夺走现实感，而且完全支配了五感之后持续显示无限现实的幻觉给予失败的过去。</p>
     <p>有时也会显示出抵抗的意思吧。如果心很强也会有焦躁的时候吧。</p>
