--- a/OEBPS/Text/c070.xhtml
+++ b/OEBPS/Text/c070.xhtml
@@ -54,7 +54,7 @@
     <p>对自己有利，还是有害？我只考虑那个部分。</p>
     <p>即使做出不利的判断，那也不是被感情所动摇，只是想沉醉于能够做出这种判断的自己．． … 假装有感情，安慰自己。</p>
     <p>这样的自己 … … 从本应分离考虑的、本应是他人的前世开始什么都没有改变的自己 … … 真的，认为是无可救药的程度肮脏的东西。在弗雷德里克中尝试射击历史这件事中，她重新明白了一件事。 … … 自己坏掉了。</p>
-    <p>以前和历史学家作战的时候．历史学家的精神攻击完全对自己不通用。</p>
+    <p>以前和历史之眼作战的时候．历史之眼的精神攻击完全对自己不通用。</p>
     <p>只能认为是强力的攻击。历史的攻击是精神破坏。</p>
     <p>因此，从一开始就坏的人是不能通用的。不能从最初溶化成为液体的水。</p>
     <p>燃烧已经燃烧的东西是没有意义的。</p>
