--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -43,7 +43,7 @@
     <p>しかし決して無条件というわけではない。</p>
     <p>ダンジョンを真に手に入れるには、攻略せねばならない。力を示さねば本当の意味でダンジョンは手に入らない。</p>
     <p>つまり、守護者との戦いだけは絶対に避けられないのだ。</p>
-    <p>『譲渡の儀にダンジョンの力は使えません。つまり守護者を相手にヒストリエをぶつけるといった戦術は使用不可能です。また、ダンジョンの魔物を出す事も出来ません。</p>
+    <p>『譲渡の儀にダンジョンの力は使えません。つまり守護者を相手に历史之眼をぶつけるといった戦術は使用不可能です。また、ダンジョンの魔物を出す事も出来ません。</p>
     <p>使える魔物は、マスター自身の力で捕獲した魔物のみです』</p>
     <p>「つまりベンケイ、クロ、ピーコ、シュフの四体か」</p>
     <p>『はい』</p>
@@ -84,7 +84,7 @@
     <p>酷く甘ったるい、嗅いでいるだけで意識が薄れそうな嫌な香りを発している。</p>
     <p>「ここまで来た者に余計な言葉は最早不要。真実を求めるならば力を示すがよい。</p>
     <p>ただし……出来るのならば」</p>
-    <p>声色こそ違うが、台詞そのものはヒストリエとよく似ている。</p>
+    <p>声色こそ違うが、台詞そのものは历史之眼とよく似ている。</p>
     <p>もしかして、守護者は全員この名乗りをしなければいけないのだろうか、と梅赛德斯は考えた。</p>
     <p>「我が名はパラディース。人が夢想し、逃げ込む幻想。</p>
     <p>真実に挑む者よ。お前もまた、私の幻想で包み込んでやろう」</p>
@@ -114,7 +114,7 @@
     <p>“重力10倍！”</p>
     <p>把重量放在上面的向下甩！</p>
     <p>用那个一击深深地打断了从帕拉迪斯的肩膀到躯干为止。</p>
-    <p>虽然力量比历史学家高，但另一方面耐久力并不大。</p>
+    <p>虽然力量比历史之眼高，但另一方面耐久力并不大。</p>
     <p>这样想的一瞬间，从伤口的断面植物生长互相缠绕的下一个瞬间完成了接合。</p>
     <p>“什……”</p>
     <p>惊愕地停止了行动，但在战斗中却是致命的。</p>
@@ -124,11 +124,11 @@
     <p>这，看起来不容易……。</p>
     <p>这样想着，梅赛德斯重新振作起来了。</p>
     <p class="divline"></p>
-    <p>ヒストリエ：精神攻撃がクッソえげつない分、戦闘力そのものは守護者の中では控えめ。</p>
+    <p>历史之眼：精神攻撃がクッソえげつない分、戦闘力そのものは守護者の中では控えめ。</p>
     <p>実は下から数えた方が早いくらいの弱さ。</p>
     <p>ただし、精神攻撃も含めた総合性能では決して他守護者に劣っていない。てゆーかまともな精神の持ち主相手ならば一番やばいが、梅赛德斯にとっては相性の問題で守護者最弱だった。</p>
-    <p>パラディース：ヒストリエのような精神攻撃がない分、単純に強い上に再生もする。</p>
-    <p>対梅赛德斯ならばヒストリエよりも遥かに強力。</p>
+    <p>パラディース：历史之眼のような精神攻撃がない分、単純に強い上に再生もする。</p>
+    <p>対梅赛德斯ならば历史之眼よりも遥かに強力。</p>
     <p>発している香りには睡眠、混乱、幻覚、毒、沈黙など様々な状態異常を起こす効果がある。</p>
     <p>ぶっちゃけると臭い息。</p>
     <p>キス〇ィス先生にバンバン使わせていたのは私だけではないはず。</p>
