--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -57,7 +57,7 @@
     <p>有挑战试炼的力量吗，在这里试一下吧！</p>
     <p>如果没有挑战的打算的话，还是回去比较好”</p>
     <p>多米尼安说了一件奇妙的亲切话，准备了兰斯。</p>
-    <p>在此之前，梅赛德斯也准备了哈佛，后来居上的莱斯利也准备了万能枪。</p>
+    <p>在此之前，梅赛德斯也准备了哈尔巴德，后来居上的莱斯利也准备了万能枪。</p>
     <p>看了那个才判断是有战斗的意思吧。多米尼翁展开了大翅膀。</p>
     <p>“我判断是有交战的意思！现在开始攻击！”</p>
     <p>“如果是攻击的话应该已经做了吧。那也是突然袭击”</p>
@@ -87,7 +87,7 @@
     <p>与此同时，为了覆盖多米尼翁，展开了光之幕。</p>
     <p>于是，莱斯利的水压攻击就被那个幕挡住了，无法到达多米尼翁。</p>
     <p>而且多米尼翁还让翅膀展翅，接近莱斯利。</p>
-    <p>但是，梅赛德斯为了阻止这一现象，从侧面将哈佛打倒，连同防护罩一起将多米尼翁吹飞。</p>
+    <p>但是，梅赛德斯为了阻止这一现象，从侧面将哈尔巴德打倒，连同防护罩一起将多米尼翁吹飞。</p>
     <p>“梅赛德斯啊……我以前就在想，你看起来很小，其实是个很强的力量战士呢……”</p>
     <p>“不要说个子矮的话。我自己也很在意”</p>
     <p>吸血鬼的不老期自己无法选择。</p>
