--- a/OEBPS/Text/c124.xhtml
+++ b/OEBPS/Text/c124.xhtml
@@ -18,10 +18,10 @@
     <p>梅塞德斯他们以向四方散开的方式回避，以各自的方法开始飞行。</p>
     <p>梅塞德斯利用操纵重力浮上天空，尤莉亚利用风的魔法做跳板在天空中奔跑。</p>
     <p>本来就会飞的ドミニオン和皮可就更不用说了。</p>
-    <p>说到用火焰攻击的守护者，就会想起ヒストリエ，但同样是火焰，Fenix的威力远胜于ヒストリエ。</p>
+    <p>说到用火焰攻击的守护者，就会想起历史之眼，但同样是火焰，Fenix的威力远胜于历史之眼。</p>
     <p>他们明明是游刃有余地回避了，天空却被炙热的热气弄得看起来扭曲了。</p>
-    <p>ヒストリエ的主要攻击是精神攻击，火焰攻击不如说是辅助攻击。</p>
-    <p>但是，菲尼克斯是纯粹的火焰驾驭者。如果认为自己和打ヒストリエ时一样，就会被烧伤。</p>
+    <p>历史之眼的主要攻击是精神攻击，火焰攻击不如说是辅助攻击。</p>
+    <p>但是，菲尼克斯是纯粹的火焰驾驭者。如果认为自己和打历史之眼时一样，就会被烧伤。</p>
     <p>梅赛德斯迅速将手转向守护者，靠重力停止了它的动作。</p>
     <p>与此同时，尤利娅扔出了冰刀，ドミニオン用矛尖发射光线。</p>
     <p>虽然冰剑在到达之前就融化了令人遗憾，但光线却是有效的。</p>
